Update for Patch v3.10.0 - checksum: 462c

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -24,6 +24,8 @@
  add_research_options_galactic_wonders_utopia:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวนและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดมหึมาที่ทรงพลังอย่างเหลือเชื่อ"
  add_research_options_galactic_wonders_utopia_megacorp:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_matter_decompressor$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวน,เครื่องดึงมวลสารจากหลุมดำและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดมหึมาที่ทรงพลังอย่างเหลือเชื่อ"
  RELICS:0 "$relics$"
+ EXCEPTIONAL_MATERIALS: "Exceptional Materials"
+ EXCEPTIONAL_MATERIALS_DESC: "Exceptional Materials are rare and valuable resources that can be gained through scientific exploration."
  MINOR_ARTIFACTS:0 "ศิลปวัตถุชั้นรอง"
  RELICS_FOUND:0 "วัตถุโบราณที่ค้นพบ"
  RELICS_FOUND_TOOLTIP:1 "เราค้นพบวัตถุโบราณ $NUM|Y$ ชิ้น"
@@ -122,6 +124,8 @@
  IS_ARCHAEOLOGICAL_SITE_FINISHED_TRIGGER:0 "Site is completed"
  IS_NOT_ARCHAEOLOGICAL_SITE_UNDER_EXCAVATION_TRIGGER:0 "Site is NOT under excavation"
  IS_ARCHAEOLOGICAL_SITE_UNDER_EXCAVATION_TRIGGER:0 "Site is under excavation"
+ IS_NOT_ARCHAEOLOGICAL_SITE_LOCKED_TRIGGER: "Site progression is NOT locked."
+ IS_ARCHAEOLOGICAL_SITE_LOCKED_TRIGGER: "Site progression is locked."
  IS_NOT_ARCHAEOLOGICAL_STAGE_CURRENT_SCORE_TRIGGER:0 "Current stage score NOT $COMPARE$ $NUM_COMPARE$"
  IS_ARCHAEOLOGICAL_STAGE_CURRENT_SCORE_TRIGGER:0 "Current stage score $COMPARE$ $NUM_COMPARE$"
  IS_NOT_ARCHAEOLOGICAL_STAGE_CURRENT_SCORE_NO_DIE_TRIGGER:0 "Current stage score excluding current die roll NOT $COMPARE$ $NUM_COMPARE$"
@@ -741,17 +745,17 @@
  building_scrap_processing_plant_desc:0 "Processing plants for material scavenged from the ring."
  building_scrap_processing_hub_desc:0 "Massive hubs where material scavenged from the ring is received and then shuttled to arrays of purifiers."
  mod_planet_miners_alloys_produces_add:0 "£alloys£ $alloys$จาก £job_miner£ [GetMinerPlural]"
- d_artifacts_1:0 "แหล่งทรัพยากรศิลปวัตถุชั้นรอง"
- d_artifacts_2:0 "$d_artifacts_1$"
- d_artifacts_3:0 "$d_artifacts_1$"
- d_artifacts_mining_1:0 "$d_artifacts_1$"
- d_artifacts_mining_2:0 "$d_artifacts_1$"
- d_artifacts_mining_3:0 "$d_artifacts_1$"
- d_artifacts_planet_1:0 "$d_artifacts_1$"
+ d_artifacts_research_1:0 "Minor Artifacts Deposit"
+ d_artifacts_research_2:0 "$d_artifacts_research_1$"
+ d_artifacts_research_3:0 "$d_artifacts_research_1$"
+ d_artifacts_mining_1:0 "$d_artifacts_research_1$"
+ d_artifacts_mining_2:0 "$d_artifacts_research_1$"
+ d_artifacts_mining_3:0 "$d_artifacts_research_1$"
+ d_artifacts_planet_1:0 "$d_artifacts_research_1$"
  d_artifacts_planet_1_desc:0 "Archaeological sites on this planet have already been extensively researched, but many objects of lesser value yet remain to be studied here."
- d_artifacts_planet_2:0 "$d_artifacts_1$"
+ d_artifacts_planet_2:0 "$d_artifacts_research_1$"
  d_artifacts_planet_2_desc:0 "$d_artifacts_planet_1_desc$"
- d_artifacts_planet_3:0 "$d_artifacts_1$"
+ d_artifacts_planet_3:0 "$d_artifacts_research_1$"
  d_artifacts_planet_3_desc:0 "$d_artifacts_planet_1_desc$"
  archaeostudies:0 "การศึกษาโบราณคดี"
  archaeostudies_desc:0 "The past holds technological secrets that yearn to be unveiled."
