--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -250,7 +250,9 @@
  requires_technology_gateway_construction:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_construction$§!"
  NAVY_SIZE_STARBASES_TITLE:0 "From Starbases"
  TECH_UNLOCK_STARBASE_MODULE:0 "§Hปลดล็อกโมดูลสถานีอวกาศ:§! $NAME$"
+ TECH_UNLOCK_ORBITAL_MODULE: "§HUnlocks Orbital Ring Module:§! $NAME$"
  TECH_UNLOCK_STARBASE_BUILDING:0 "§Hปลดล็อกสิ่งปลูกสร้างบนสถานีอวกาศ:§! $NAME$"
+ TECH_UNLOCK_ORBITAL_BUILDING: "§HUnlocks Orbital Ring Building:§! $NAME$"
  tech_ftl_inhibitor:0 "การยับยั้งการเคลื่อนที่ที่เร็วกว่าแสง"
  tech_ftl_inhibitor_desc:1 "Gravity well projectors can be used to create localized pockets of space where safe entry into hyperspace is impossible. The immense power requirements and the size of the projectors prohibits their use on anything smaller than a starbase."
  ION_CANNON_CORE:0 "แกนกลางปืนใหญ่ไอออน"
@@ -325,7 +327,7 @@
  FLEET_TEMPLATE_MILITARY_POWER:0 "£military_power£ $POWER_STRING$"
  FLEET_TEMPLATE_POWER_MAX_UNREACHED_VALUE_FORMAT:0 "$CURRENT_STRING|R$"
  FLEET_TEMPLATE_POWER_MAX_REACHED_VALUE_FORMAT:0 "$CURRENT_STRING$"
- FLEET_TEMPLATE_COMMAND_LIMIT_REACHED:0 "Command Limit not enough for adding this ship."
+ FLEET_TEMPLATE_COMMAND_LIMIT_REACHED:0 "ขีดจำกัดคำสั่งไม่เพียงพอสำหรับการเพิ่มยานลำนี้"
  FLEET_TEMPLATE_EVENT_DESIGN:0 "Event Design"
  MULTIPLE_SHIPS_DISBAND_TITLE:0 "ยุบยาน"
  MULTIPLE_SHIPS_DISBAND_DESC:2 "ปลดยานทั้ง $COUNT$ ลำ?"
@@ -412,8 +414,8 @@
  planet_destruction.610.purif:0 "Old heresies will do naught but burn."
  planet_destruction.615.A:0 "[From.GetName] is better this way."
  planet_destruction.615.spir:0 "Consider it as sprinkling the holy water."
- action.87.name:0 "§RColony Lost!§!"
- action.87.desc:0 "We have lost administrative control of §Y[From.GetName]§! to §Y[new_planet_owner.GetName]§!, who controls the §HStarbase§! in the §Y[From.GetStarName]§! system."
+ action.87.name:0 "§Rเสียอาณานิคม!§!"
+ action.87.desc:0 "เราได้สูญเสียการควบคุมดูแลระบบของ §Y[From.GetName]§! ให้กับ §Y[new_planet_owner.GetName]§! ซึ่งเป็นผู้ควบคุม §Hฐานอวกาศ§! ในระบบดาว §Y[From.GetStarName]§!"
  action.88.name:0 "Colony Gained!"
  action.88.desc:0 "We have gained administrative control of §Y[From.GetName]§!, formerly a holding of §Y[former_planet_owner.GetName]§!, because we control the §HStarbase§! in the §Y[From.GetStarName]§! system."
  apoc.1.name:0 "เกตเวย์ที่ถูกทิ้งร้าง"
