--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -284,7 +284,7 @@
  distar.57.desc:1 "News of the death of [From.Fleet.GetName] has rippled through the [Root.GetName], though none have been as affected as Science Officer [amoeba_finding_scientist.GetName]. It was [amoeba_finding_scientist.GetSheHe] who first discovered the Space Amoeba as a lost and helpless juvenile, and watched the creature grow to full maturity under [amoeba_finding_scientist.GetHisHer] own gentle guidance.\n\nNow, without [From.Fleet.GetName]'s silent companionship, Officer [amoeba_finding_scientist.GetName] may never be the same again."
  distar.57.a:0 "A pity."
  distar.304.name:0 "Centenarian"
- distar.304.desc:0 "Exciting news from our fleet admirals is being broadcasted over [Root.Capital.GetName]. Our adopted Space Amoeba, [lost_amoeba_centenarian_fleet.GetName], has just reached an impressive one hundred years of age.\n\nThough a grizzled centenarian, it appears age has proven no impediment to our amoeboid ally. In fact, our fleets report [lost_amoeba_centenarian_fleet.GetName]'s presence on the battlefield has only grown more formidable over time. [lost_amoeba_centenarian_fleet.GetName] has become a force even the best-equipped battleship would have trouble contending with. Seeing her billowing flagella enter a system never fails to lift the [Root.GetSpeciesAdj] spirit."
+ distar.304.desc:0 "Exciting news from our fleet commanders is being broadcasted over [Root.Capital.GetName]. Our adopted Space Amoeba, [lost_amoeba_centenarian_fleet.GetName], has just reached an impressive one hundred years of age.\n\nThough a grizzled centenarian, it appears age has proven no impediment to our amoeboid ally. In fact, our fleets report [lost_amoeba_centenarian_fleet.GetName]'s presence on the battlefield has only grown more formidable over time. [lost_amoeba_centenarian_fleet.GetName] has become a force even the best-equipped battleship would have trouble contending with. Seeing her billowing flagella enter a system never fails to lift the [Root.GetSpeciesAdj] spirit."
  distar.304.a.tooltip:0 "[lost_amoeba_centenarian_fleet.GetName] has developed new combat skills!"
  distar.60.name:0 "Blinding Fate"
  distar.60.desc:0 "The irradiated fragments the [Root.GetName] crew registered in close orbit of [From.GetName] are indeed the remains of a space-faring vessel. With a very distinctive design, it matches no known make on record.\n\nWe have extracted some data from the ship's damaged computers, recorded in an alien language like nothing we have ever seen before - and one we are unable to translate.\n\nBy studying the remains, Science Officer [Root.GetLeaderName] postulates that the craft, known as the 'Kohtalo', suffered a navigational error when exiting FTL, bringing it too close to the gamma-ray jets of [From.GetName]. Large portions of the ship were stripped apart through radiolysis. There are no survivors."
@@ -574,7 +574,7 @@
  distar.246.f:0 "What happened here?"
  distar.246.f.response:0 "§EUn--fortunately, a hyperdrive malfunction led Drop Pods 114 through 175 to exit hyperspace eighteen parsecs from our intended destination.\n\nI have attended the citizens as best I could. I managed to prevent cannibalism for one-thousand-eight-hundred-and-forty days. Un--fortunately, their air supply eventually ran out.\n\nDo you have citizens in need of tending, <<UNIDENTIFIED VISITOR C>>? If so, I would be happy to care for them.§!"
  distar.246.a:1 "ยินดีต้อนรับ Caretaker!"
- distar.246.a.tooltip:0 "§Yผู้ว่าการ $NAME_Caretaker$§! จะถูกเพิ่มเข้าในกลุ่มผู้นำที่สามารถเลือกจ้างได้"
+ distar.246.a.tooltip:0 "§YOfficial $NAME_Caretaker$§! will be added to our recruited Leader Pool."
  distar.246.b:1 "วิเคราะห์ส่วนต่างๆ ของมัน"
  distar.246.b.tooltip:0 "Examine the machine unit for engineering insight."
  distar.246.c:0 "นโยบายของเราห้ามการใช้ AI ขั้นสูง ปิดช่องทางการสื่อสาร"
@@ -1855,7 +1855,7 @@
  graygoo.405.b.response:0 "Oh well. Time for me to return to the surface then.\n\nI'll probably busy myself by wandering around the extensive subterranean cave network of [gray_homeworld.GetName]. Perhaps we'll meet again when I emerge, a few thousand of your years from now. Take care!"
  graygoo.406.desc:0 "เข้าร่วมกับคุณ? เข้าร่วมกับคุณ? คุณต้องการให้ฉันอยู่ใต้บังคับบัญชาของเอเลี่ยนกลุ่มแรกที่ฉันเจอเหรอ? ฉันแค่... ฉันไม่แม้แต่จะ... เดี๋ยวก่อน ให้ฉันอธิบายตรงๆ เลย...\n\nคุณคิดว่าฉันจะสาบานว่าจะจงรักภักดีต่อคุณจริงๆ แม้ว่าฉันจะไม่รู้อะไรเกี่ยวกับจักรวรรดิของคุณหรืออดีตที่เลวร้ายของคุณจริงเหรอ?\n\nฉันไม่รู้ว่าอะไรแย่กว่านั้นที่คุณอยากจะแนะนำ... ก็... จริงๆ แล้ว... ลองคิดดูอีกครั้ง... อะไรกัน ทำไมจะไม่ได้ล่ะ? ลงทะเบียนให้ฉัน ไม่ ไม่ ฉันจริงจัง! ฉันได้รับความรู้สึกดีๆ ที่นี่ ข้าพเจ้าขอปฏิญาณว่าจะจงรักภักดีต่อท่านต่อไปอีก 2,000 ปีข้างหน้า จริงๆ แล้วเรามาทำให้ได้ 5,000 ปีกันเถอะ"
  graygoo.406.a:0 "คุณทำอะไรได้บ้าง?"
- graygoo.406.a.response:0 "Before you get the notion of asking me to split into a few dozen fleets of nanite warships, I have to tell you that I insist on maintaining a single indivisible form. I've done the fleets thing before, and it's impossible to maintain any kind of coherent "personality" over such distances. My current consciousness would not survive the ordeal.\n\nBut a single massive warship is fine. I can do that. If you want to, I could also assume a smaller form for fighting on the ground. Or... if you're feeling less violently inclined, I would be happy to assume the role of governor. Monoform society has always fascinated me.\n\nOf course, I will be able to switch roles on request, so you can easily reverse any decision you make."
+ graygoo.406.a.response:0 "Before you get the notion of asking me to split into a few dozen fleets of nanite warships, I have to tell you that I insist on maintaining a single indivisible form. I've done the fleets thing before, and it's impossible to maintain any kind of coherent "personality" over such distances. My current consciousness would not survive the ordeal.\n\nBut a single massive warship is fine. I can do that. If you want to, I could also assume a smaller form for fighting on the ground. Or... if you're feeling less violently inclined, I would be happy to assume the role of official. Monoform society has always fascinated me.\n\nOf course, I will be able to switch roles on request, so you can easily reverse any decision you make."
  graygoo.406.b:0 "เราควรเรียกคุณว่าอะไร?"
  graygoo.406.b.response:0 "There is no language known to your kind that could properly convey the full name of the nanite consciousness that constitutes my being.\n\nOur creators called us the "Naar-Di-Shav" which roughly translates to "Gray Tempest" in your language. I suppose to keep things simple you could simply call me "§HGray§!.""
  graygoo.406.c:0 "ยินดีต้อนรับสู่ [Root.GetName]!"
@@ -1875,14 +1875,14 @@
  graygoo.500.d.desc:0 "Where do you want me, boss?"
  graygoo.500.allow.a:0 "Gray must not be in combat"
  graygoo.500.allow.b:0 "Gray must not be damaged"
- graygoo.500.a:0 "เราต้องการให้คุณทำหน้าที่เป็น §Hผู้ว่าการ§!"
+ graygoo.500.a:0 "We need you to serve as §HOfficial§!."
  graygoo.500.a.response:0 "Excellent. I think I've finally nailed the [Root.GetSpeciesName] look. There was an extra tentacle that wasn't supposed to be there last time."
  graygoo.500.b:0 "เราต้องการ §Hยานรบ§!"
  graygoo.500.b.response:0 "Ah, to prowl the void in search of prey again. This will certainly bring back memories."
  graygoo.500.c:0 "แปลงร่างเป็น §Hยูนิตภาคพื้น§!"
  graygoo.500.c.response:0 "Let's see... bipedal, tripodal or quadrupedal... or maybe I'll go for a tracked warform this time..."
  graygoo.500.d:0 "ไม่เป็นไร"
- graygoo.501.a.desc:0 "You have reached Governor Gray's office. Do you have an appointment?"
+ graygoo.501.a.desc:0 "You have reached Official Gray's office. Do you have an appointment?"
  graygoo.501.b.desc:0 "Did I get the [Root.GetSpeciesName] look right?"
  graygoo.501.c.desc:0 "How do you like my office? I built it myself. I guess I should put some diplomas and stuff up on the walls to dazzle visitors."
  graygoo.501.d.desc:0 "Who knew that hard, honest work could be so rewarding?"
