--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -29,6 +29,8 @@
  CANNOT_ACCESS_SYSTEM_TRIGGER:0 "Cannot access the $SYSTEM$ system"
  IS_LEADER_AGE:0 "อายุผู้นำ $COMPARATOR$ $NUM|Y$"
  IS_NOT_LEADER_AGE:0 "อายุผู้นำไม่ $COMPARATOR$ $NUM|Y$"
+ IS_LEADER_LIFESPAN: "Leader lifespan is $COMPARATOR$ $NUM|Y$"
+ IS_NOT_LEADER_LIFESPAN: "Leader lifespan NOT $COMPARATOR$ $NUM|Y$"
  IS_YEARS_OF_SERVICE:0 "อายุงานของผู้นำ $COMPARATOR$ $NUM|Y$ ปี"
  IS_NOT_YEARS_OF_SERVICE:0 "อายุงานของผู้นำ ไม่$COMPARATOR$ $NUM|Y$ ปี"
  DECLINE_CALLED_IN_FAVOR_TITLE:0 "ปฏิเสธการทวงบุญคุณ"
@@ -185,7 +187,7 @@
  getenvoyplural_hive:0 "diplomatic drones"
  getenvoyplural_normal:0 "ทูต"
  envoy_events.3.name:0 "A Contribution to Galactic Comedy"
- envoy_events.3.desc.base:0 "[event_envoy.GetName], our [Root.GetEnvoy] representing our interests in the Galactic Community, has committed a major faux pas, mistaking the [council_country.GetAdj] delegate for a [pathetic_country.GetSpeciesName]. Unfortunately, the incriminating remarks were witnessed by many onlookers, who duly showered [event_envoy.GetName] with ridicule."
+ envoy_events.3.desc.base:0 "[event_envoy.GetName], our emissary representing our interests in the Galactic Community, has committed a major faux pas, mistaking the [council_country.GetAdj] delegate for a [pathetic_country.GetSpeciesName]. Unfortunately, the incriminating remarks were witnessed by many onlookers, who duly showered [event_envoy.GetName] with ridicule."
  envoy_events.3.desc:0 "$envoy_events.3.desc.base$ Many now cast aspersions on the competence of our diplomatic corps, although our contribution to galactic comedy cannot be doubted."
  envoy_events.3.desc.hive:0 "$envoy_events.3.desc.base$ Many now cast aspersions on the competence of our diplomatic thought routines, although our contribution to galactic comedy cannot be doubted."
  envoy_events.3.desc.machine:0 "$envoy_events.3.desc.base$ Many now cast aspersions on the competence of our diplomatic systems, although our contribution to galactic comedy cannot be doubted."
@@ -197,7 +199,7 @@
  galactic_community_diplo_corps_is_a_joke:0 "คณะทูตถูกเยาะเย้ย"
  galactic_community_diplo_corps_is_a_joke_desc:0 "One of our envoys has committed a major faux pas, making our diplomatic corps the laughing stock of the galaxy."
  envoy_events.4.name:0 "Astute Galactic Diplomacy"
- envoy_events.4.desc.base:0 "Although we are not able to count ourselves among the true superpowers of this galaxy, we have often been able to punch above our weight in galactic affairs. This is largely down to the exertions of our [Root.GetEnvoy] [event_envoy.GetName], who ably represents our interests in the Galactic Community and commands deep respect even among those stridently opposed to all the [Root.GetName] stands for."
+ envoy_events.4.desc.base:0 "Although we are not able to count ourselves among the true superpowers of this galaxy, we have often been able to punch above our weight in galactic affairs. This is largely down to the exertions of our emissary [event_envoy.GetName], who ably represents our interests in the Galactic Community and commands deep respect even among those stridently opposed to all the [Root.GetName] stands for."
  envoy_events.4.desc:0 "$envoy_events.4.desc.base$ As a result, even though not everyone may fear the might of our navy or long to match the depths of our coffers, they nevertheless admire the prowess of our diplomatic corps."
  envoy_events.4.desc.hive:0 "$envoy_events.4.desc.base$ As a result, even though not everyone may fear the might of our navy or long to match the extent of our material resources, they nevertheless admire the prowess of our diplomatic thought routines."
  envoy_events.4.desc.machine:0 "$envoy_events.4.desc.base$ As a result, even though not everyone may fear the might of our navy or long to match the extent of our material resources, they nevertheless admire the prowess of our diplomatic thought systems."
@@ -251,11 +253,11 @@
  diplo_corps_lost_control:0 "Diplomatic Corps Ridiculed"
  diplo_corps_lost_control_desc:0 "Our inability to keep control of our own diplomats does not inspire confidence among our peers."
  envoy_events.15.name:0 "A Strange Creature"
- envoy_events.15.desc:0 "[event_envoy.GetName], our envoy to the Galactic Community, has been spending a disturbing amount of time tending to a strange, small mammalian creature that began following [event_envoy.GetHerHim] around. Presumably a domestic pet that escaped from one of the other delegations, it is undeniably cute but shows no sign of sapient thought. Although it is highly carnivorous and exhibits sharp teeth and claws, it is generally affectionate and desires plentiful physical contact in the form of petting - though its mood swings can be sudden and violent!\n\nAlthough the creature has proved a distraction for [event_envoy.GetName]'s more serious tasks, other delegates have commented on the endearing nature of the softer, more sentimental side of the [Root.GetSpeciesName] psyche that has been revealed."
+ envoy_events.15.desc:0 "[event_envoy.GetName], our emissary to the Galactic Community, has been spending a disturbing amount of time tending to a strange, small mammalian creature that began following [event_envoy.GetHerHim] around. Presumably a domestic pet that escaped from one of the other delegations, it is undeniably cute but shows no sign of sapient thought. Although it is highly carnivorous and exhibits sharp teeth and claws, it is generally affectionate and desires plentiful physical contact in the form of petting - though its mood swings can be sudden and violent!\n\nAlthough the creature has proved a distraction for [event_envoy.GetName]'s more serious tasks, other delegates have commented on the endearing nature of the softer, more sentimental side of the [Root.GetSpeciesName] psyche that has been revealed."
  envoy_events.15.A:0 "Perfect."
  opinion_feline_affection:0 "Feline Affection"
  envoy_events.17.name:0 "Disputes Among Allies"
- envoy_events.17.desc.base:0 "The recent law changes in the [Root.Federation.GetName] caused a significant stir, with old ideological debates between ourselves and the [dispute_winner.GetName] once again rising to the fore. Our representative, [dispute_loser_envoy.GetName], bravely represented our side of the debate against the [dispute_winner.GetAdj] envoy, [dispute_winner_envoy.GetName]."
+ envoy_events.17.desc.base:0 "The recent law changes in the [Root.Federation.GetName] caused a significant stir, with old ideological debates between ourselves and the [dispute_winner.GetName] once again rising to the fore. Our representative, [dispute_loser_envoy.GetName], bravely represented our side of the debate against the [dispute_winner.GetAdj] official, [dispute_winner_envoy.GetName]."
  envoy_events.17.desc.end:0 "Citizens across the [Root.GetGovernmentName] watched the debate with interest, and are increasingly concerned about how to reconcile their ideals with membership in the [Root.Federation.GetName]."
  envoy_events.17.desc.militarist:0 "$envoy_events.17.desc.base$ However, [dispute_loser_envoy.GetSheHe] [dispute_loser_envoy.GetWasWere] unable to convince those present of the benefits of a more militaristic outlook, and as the debate turned against [dispute_loser_envoy.GetHerHim], [dispute_loser_envoy.GetSheHe] appeared increasingly rattled as accusations of "[Root.GetAdj] warmongering" were made against [dispute_loser_envoy.GetHerHim] from all sides.\n\n$envoy_events.17.desc.end$"
  envoy_events.17.desc.pacifist:0 "$envoy_events.17.desc.base$ However, [dispute_loser_envoy.GetSheHe] [dispute_loser_envoy.GetWasWere] unable to convince those present of the benefits of a more pacifistic outlook, and faced vociferous retorts from all quarters that "[Root.GetAdj] naivety" allegedly threatens the safety of the entire federation.\n\n$envoy_events.17.desc.end$"
