--- a/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
@@ -32,7 +32,7 @@
  SCIENCE_CLOAKING_EMPTY:0 "Empty Slot"
  science_cloaking_components:0 " เครื่องกำเนิดสนามพลังพรางตัว"
  science_cloaking_components_desc:0 "Cloaking field generators allow our vessels to hide from conventional sensors."
- SHIP_SHIELD_REDUCTION_CLOAKING:0 "$MOD_SHIP_SHIELD_REDUCTION$ from cloaking"
+ SHIP_SHIELD_REDUCTION_CLOAKING:0 "$MOD_SHIP_SHIELD_REDUCTION$ from Cloaking"
  CLOAKING_SHIELD_REDUCTION_HEADER:1 "\n$SHIP_SHIELD_REDUCTION_CLOAKING$:"
  CLOAKING_1:0 "เครื่องกำเนิดสนามพลัง B.C. Field"
  CLOAKING_1_DESC:0 "$tech_cloaking_1_desc$"
@@ -229,6 +229,8 @@
  TRADE_PROTECTION_DESC:0 "§E§H$MOD_STARBASE_TRADE_PROTECTION_ADD$§! คือจำนวนที่ ฐานอวกาศ นี้จะลดการปล้นสะดมในระบบดาวใกล้เคียง§!"
  TRADE_PROTECTION_RANGE_VALUE:0 "$PROTECTION_RANGE$: $VALUE|Y0$"
  TRADE_PROTECTION_RANGE_DESC:0 "§E§H$PROTECTION_RANGE$§! คือระยะสูงสุดของการคุ้มครองการค้าของฐานอวกาศนี้ที่จะลดการปล้นสะดมในระบบดาวใกล้เคียง§!"
+ MESSAGE_FLEET_FORCED_TO_DECLOAK_MESSAGE_TYPE_TITLE: "Forced to Decloak"
+ MESSAGE_FLEET_FORCED_TO_DECLOAK: "Detection in the $SYSTEM|H$ forced $FLEET$ to decloak!"
  GO_TO_preFTL_PLANET:0 "ไปที่ดาวเคราะห์"
  GO_TO_preFTL_PLANET_tt:0 "คลิกเพื่อเยี่ยมชมดาวเคราะห์ pre-FTL"
  GO_TO_OBSERVATION_POST:0 "Go To Observation Post"
