--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -105,7 +105,7 @@
  leviathans.105.c.trust:0 "ต้องการ §YTrader Enclave§! ให้มี:\n£opinion£ ทัศนคติ +50\n"
  leviathans.105.d:0 "ไม่มีอะไรในตอนนี้ ลาก่อน"
  leviathans.105.z:1 "เราต้องการว่าจ้าง §Yที่ปรึกษา§!"
- trader_tt_governor:1 "ว่าจ้าง §Yผู้ว่าการ§! [enclave_country.GetAdj]"
+ trader_tt_official:1 "Hire a [enclave_country.GetAdj] §Y$official$§!."
  leviathans.110.a.reply:0 "Thank you for your business. Please come again!"
  leviathans.110.b.reply:0 "An excellent choice. You will not be disappointed by the quality of our minerals."
  leviathans.110.c.reply:0 "Big spender, eh? Looks like we can close early today!"
@@ -120,7 +120,7 @@
  leviathans.125.z1.gestalt:0 "We understand, and wish to proceed anyway."
  leviathans.126.desc:0 "Excellent! We are happy to share our skills with the [Root.GetName]."
  leviathans.126.desc.alt: "Excellent! May we both profit from each other's... distinct approach to commerce."
- already_hired_trader_governor:2 "§RWe have already recruited a leader from the [enclave_country.GetName]§!."
+ already_hired_trader_official:2 "§RWe have already recruited a leader from the [enclave_country.GetName]§!."
  recruit_trader_leader:1 "เพิ่ม §Yผู้ว่าการ§! [enclave_country.GetAdj] ที่มี §Yคุณลักษณะเทรดเดอร์ผู้ประสานงาน§! ในกลุ่ม §Hผู้นำ§!"
  requires_trader_enclave:0 "§RRequires a §YTrader Enclave§! in the system.§!"
  sm_trader_proxy_office:0 "Trader Proxy Office"
@@ -130,15 +130,15 @@
  leader_trait_enclave_trader_desc:0 "Recruited from one of the independent merchant Enclaves, this leader is particularly adept at maximizing Trade Value."
  trader_catch_phrase: "§L"Now about that small consulting fee..."§!"
  leader_trait_xuracorp_liaison: "XuraCorp Liaison"
- leader_trait_xuracorp_liaison_desc: "Recruited from XuraCorp, this Governor holds shares in several Exotic Gas production facilities."
+ leader_trait_xuracorp_liaison_desc: "Recruited from XuraCorp, this leader holds shares in several Exotic Gas production facilities."
  xuracorp_trader_desc: "$leader_trait_xuracorp_liaison_desc$"
  xuracorp_trader_catch_phrase: "$trader_catch_phrase$"
  leader_trait_riggan_liaison: "Riggan Liaison"
- leader_trait_riggan_liaison_desc: "Recruited from the Riggan Commerce Exchange, this Governor spends their spare time dealing in Volatile Mote futures."
+ leader_trait_riggan_liaison_desc: "Recruited from the Riggan Commerce Exchange, this leader spends their spare time dealing in Volatile Mote futures."
  riggan_trader_desc: "$leader_trait_riggan_liaison_desc$"
  riggan_trader_catch_phrase: "$trader_catch_phrase$"
  leader_trait_muutagan_liaison: "Muutagan Liaison"
- leader_trait_muutagan_liaison_desc: "Recruited from the Muutagan Merchant Guild, this Governor owns several private Rare Crystal mines."
+ leader_trait_muutagan_liaison_desc: "Recruited from the Muutagan Merchant Guild, this leader owns several private Rare Crystal mines."
  muutagan_trader_desc: "$leader_trait_muutagan_liaison_desc$"
  muutagan_trader_catch_phrase: "$trader_catch_phrase$"
  councilor_enclave_trader: "เทรดเดอร์ผู้ประสานงาน"
@@ -528,7 +528,7 @@
  leviathans.665.desc.gesta:0 "The Ether Drake egg recovered from the Dragon's Hoard planetoid can no longer be considered viable.\n\nThe species is extinct."
  leviathans.665.desc.machine: "The Ether Drake egg is terminated. Biological processes have crashed, and there are no available error reports for debugging."
  leviathans.670.name:0 "Dragonslayer"
- leviathans.670.desc:3 "The formidable Ether Drake has been slain. The exceptional bravery of Admiral [From.From.GetLeaderName] and the [From.From.GetName] will not soon be forgotten.\n\nThe §Hplanetoid§! the beast guarded so jealously can now be safely exploited. Who knows what treasures the creature might have amassed over the eons?"
+ leviathans.670.desc:3 "The formidable Ether Drake has been slain. The exceptional bravery of Commander [From.From.GetLeaderName] and the [From.From.GetName] will not soon be forgotten.\n\nThe §Hplanetoid§! the beast guarded so jealously can now be safely exploited. Who knows what treasures the creature might have amassed over the eons?"
  leviathans.670.desc.noleader:3 "The formidable Ether Drake has been slain. The exceptional bravery of the [From.From.GetName] will not soon be forgotten.\n\nThe §Hplanetoid§! the beast guarded so jealously can now be safely exploited. Who knows what treasures the creature might have amassed over the eons?"
  leviathans.670.desc.gesta:0 "The formidable Ether Drake has been slain.\n\nThe §Hplanetoid§! the beast guarded so jealously can now be safely exploited. What treasures might the creature have amassed over the eons?"
  leviathans.670.a:0 "Commendable."
@@ -809,7 +809,7 @@
  opinion_destroyed_trader:0 "Destroyed Trader Enclave"
  opinion_destroyed_trader_sr:0 "Destroyed Traders we had deals with"
  leader_trait_dragonslayer:0 "ผู้ฆ่ามังกร"
- leader_trait_dragonslayer_desc:0 "This Admiral has proven themselves in fierce combat."
+ leader_trait_dragonslayer_desc:0 "This Commander has proven themselves in fierce combat."
  leader_trait_dragonbane:0 "มังกรอันตราย"
  leader_trait_dragonbane_desc:0 "This Leader has seen intense combat, and lived to tell the tale."
  infinity_calculations:0 "The Singularity Processor"
