--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -152,8 +152,8 @@
  MESSAGE_KICK_FROM_FEDERATION_TITLE:0 "สมาชิกถูกขับออกจากสหพันธ์"
  MESSAGE_ASK_TO_JOIN_ALLIANCE_TITLE:0 "คำขอเข้าร่วมเป็นพันธมิตร"
  MESSAGE_LEAVE_ALLIANCE_TITLE:0 "สมาชิกพันธมิตรออก"
- DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
- DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
+ DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจากพันธมิตร $ALLIANCE|Y$"
+ DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "$COUNTRY|Y$ ออกจากสหพันธ์ $ALLIANCE|Y$"
  MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "ต้องการให้เป็นบริวาร(เมืองขึ้น)"
  MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "ความต้องการลังจากการพิชิต"
  MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "คำขอให้ปลดปล่อยบริวาร"
@@ -255,11 +255,11 @@
  VICTORY_KEY: "Victory"
  MESSAGE_DEFEAT_TITLE:1 "§Rพ่ายแพ้§!"
  DEFEAT_KEY: "Defeat"
- MESSAGE_ALLIED_ENTERED_WAR:1 "The $ATTACKER|Y$ has declared war on our ally, the $CALLER|Y$.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
+ MESSAGE_ALLIED_ENTERED_WAR:1 "$ATTACKER|Y$ ได้ประกาศสงคราม กับพันธมิตรของเรา ($CALLER|Y$)\n\nด้วยเหตุนี้ เราจึง §Yทำสงคราม§! กับ $ATTACKER|Y$!"
  MESSAGE_GUARANTEED_ENTERED_WAR:0 "Guaranteed is under attack"
  MESSAGE_GUARANTEER_ENTERED_WAR_DESC:1 "The $ATTACKER|Y$ has declared war on $CALLER|Y$, whose independence we have guaranteed.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
  MESSAGE_GUARANTEER_ENTERED_WAR_TITLE:0 "Guarantor Entered War"
- MESSAGE_ALLIED_ENTERED_WAR_TITLE:0 "Ally Entered War"
+ MESSAGE_ALLIED_ENTERED_WAR_TITLE:0 "พันธมิตรเข้าสู่สงคราม"
  MESSAGE_OVERLORD_ENTERED_WAR_TITLE:0 "Overlord Entered War"
  MESSAGE_OVERLORD_ENTERED_WAR_DESC:1 "The $ATTACKER|Y$ has declared war on our Overlord, the $CALLER|Y$.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
  MESSAGE_SUBJECT_ENTERED_WAR_TITLE:0 "บริวารเข้าสู่สงคราม"
@@ -275,7 +275,7 @@
  MESSAGE_WAR_ENDED:0 "สงครามสิ้นสุดลง"
  MESSAGE_WAR_ENDED_DESC_1:2 "The war between $ATTACKER|Y$ and $DEFENDER|Y$ has ended due to $DEFENDER|Y$ being subjugated or annexed by a third party."
  MESSAGE_WAR_ENDED_DESC_2:3 "Our war with $ENEMY|Y$ has ended due to them being subjugated or annexed by $OVERLORD|Y$. We have not entered a truce."
- MESSAGE_WAR_ENDED_DESC_3:2 "We have left the war against $ENEMY|Y$ due to being subjugated by $OVERLORD|Y$."
+ MESSAGE_WAR_ENDED_DESC_3:2 "เราหยุดทำสงครามกับ $ENEMY|Y$ เนื่องจาก ตกเป็นบริวารของ $OVERLORD|Y$"
  MESSAGE_VASSAL_ENTER_WAR:0 "Subject Enters War"
  MESSAGE_VASSAL_ENTER_WAR_DESC_1:1 "$VASSAL|Y$, the vassal of one of our allies has entered the war against $ENEMY|Y$."
  MESSAGE_VASSAL_ENTER_WAR_DESC_2:1 "Our vassal, $VASSAL|Y$, has entered the war against $ENEMY|Y$."
@@ -283,6 +283,8 @@
  MESSAGE_ENEMY_VASSAL_ENTER_WAR_DESC:1 "$ENEMY|Y$, the subject of one of our enemies has entered the war against us."
  MESSAGE_ENEMY_LEAVES_WAR:0 "Enemy Leaves War"
  MESSAGE_ENEMY_LEAVES_WAR_DESC:3 "$ENEMY|Y$ has left the war due to being subjugated or annexed by $OVERLORD|Y$."
+ TOAST_TRUCE_IS_OVER_TITLE: "Truce Expired"
+ TOAST_TRUCE_IS_OVER_DESC: "Our truce with the §Y$ENEMY$§! is over."
  MESSAGE_FLEET_DETECTED_WE:0 "§H$FLEET$§! จาก $WHO|Y$ ถูกตรวจพบในเส้นทางที่ตรงไปยัง §Yระบบดาว $TARGET$§!!"
  MESSAGE_FLEET_DETECTED_MESSAGE_TYPE_TITLE:0 "ตรวจพบกองยาน"
  MESSAGE_OBJECT_DETECTED_WE:0 "An unidentified object has been detected on a direct course towards the §Y$TARGET$ System§!!"
@@ -291,9 +293,12 @@
  MESSAGE_FLEET_EVADE_HOSTILE_FLEET_TYPE:0 "$TYPE$ $NAME|H$"
  MESSAGE_FLEET_EVADE_HOSTILE_MESSAGE_TYPE_TITLE:0 "กำลังหลบเลี่ยงกองยานศัตรู"
  FLEET_LEADER_DEATH:1 "$CLASS|H$ $LEADER|Y$ ตายเมื่อ $SHIP|Y$ ถูกทำลาย"
+ ALIVE_FLEET_LEADER_DEATH: "$CLASS|H$ $LEADER|Y$ died while operating the $SHIP|Y$."
  ARMY_LEADER_DEATH:1 "$CLASS|H$, $LEADER|Y$ ของเราตายขณะบัญชาการ $ARMY|Y$"
  PLANET_LEADER_DEATH:1 "$CLASS|H$, $LEADER|Y$ ของเราตายที่ดาว $PLANET|Y$"
  COUNTRY_LEADER_DEATH:1 "$CLASS|H$, $LEADER|Y$ ของเราตาย!"
+ SYSTEM_LEADER_DEATH: "Our $CLASS|H$, $LEADER|Y$ has died in system $SYSTEM|Y$"
+ SPY_LEADER_DEATH: "Our $CLASS|H$, $LEADER|Y$ has died while in $TARGET|Y$."
  HEIR_DEATH:1 "§H$HEIR$§!, $HEIRNAME|Y$ ของเราตาย!"
  RULER_ELECTED:0 "เลือกผู้ปกครองคนใหม่แล้ว! $TITLE$ $LEADER|Y$ จะปกครองไปจนถึงการเลือกตั้งครั้งต่อไป ซึ่งจะเกิดขึ้นใน $TIME|Y$"
  RULER_ELECTED_UNTIL_DEATH:1 "$TITLE$ $LEADER|Y$ ได้รับเลือกให้เป็นผู้ปกครองคนใหม่ และจะครองตำแหน่งไปจนตาย"
@@ -310,6 +315,7 @@
  LEADER_DEATH_AGE:0 "$CLASS|Y$ $LEADER|Y$ เสียชีวิตเมื่ออายุได้ $AGE|Y$ ปี"
  LEADER_RETIRED_DESC:0 "$CLASS|Y$ $LEADER|Y$ เกษียณเมื่ออายุ $AGE|Y$"
  TOOLTIP_KILL_LEADER:0 "$CLASS|Y$ $LEADER|Y$ §Rตาย§!"
+ TOOLTIP_FIRE_LEADER: "$CLASS|Y$ $LEADER|Y$ §Ris fired§!"
  MESSAGE_LEADER_EXPERIENCE_TITLE:0 "ผู้นำได้รับประสบการณ์"
  LEADER_EXPERIENCE_NOTIFICATION_DESC:0 "§T$CLASS|Y$ $LEADER|Y$ gained experience from combat\n\n$STATS$§!"
  MESSAGE_LEADER_LEVEL_UP_TITLE:1 "ผู้นำเลเวลอัป"
@@ -321,6 +327,9 @@
  LEADER_GENERAL_BASE_EXPERIENCE:0 "§TGround Engagement: $VAL|0H$ experience§!"
  LEADER_GENERAL_HOSTILE_KILLED_EXPERIENCE:0 "§THostile Forces Destroyed: $VAL|0H$ experience§!"
  LEADER_GENERAL_FRIENDLY_LOST_EXPERIENCE:0 "§TFriendly Forces Lost: $VAL|0H$ experience§!"
+ LEADER_COMMANDER_BASE_EXPERIENCE:0 "§TEngagement: $VAL|0H$ experience§!"
+ LEADER_COMMANDER_HOSTILE_KILLED_EXPERIENCE:0 "§THostile Forces Destroyed: $VAL|0H$ experience§!"
+ LEADER_COMMANDER_FRIENDLY_LOST_EXPERIENCE:0 "§TFriendly Forces Lost: $VAL|0H$ experience§!"
  MESSAGE_NEW_HEIR_TITLE:0 "§Hรัชทายาทคนใหม่§!"
  NEW_HEIR_KEY: "New Heir"
  NEW_HEIR_TEXT:0 "§Y$HEIR$§! เป็นรัชทายาทคนใหม่ของจักรวรรดิและจะครองบัลลังก์เมื่อผู้ปกครองคนปัจจุบันของเราสิ้นพระชนม์"
