--- a/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
@@ -232,7 +232,7 @@
  NAME_The_Mentat:0 "The Mentat"
  NAME_Tuborek:0 "Tuborek"
  NAME_Holy_World_War:0 "[This.MainAttacker.GetAdj] Holy World War"
- NAME_The_War_in_Heaven:0 "The War in Heaven"
+ NAME_The_War_in_Heaven:0 "สงครามมหาเทพ"
  NAME_training_adversary:0 "Training Adversary"
  NAME_Training_Targets:0 "Training Exercise Targets"
  NAME_Elusive_Craft:0 "Elusive Craft"
