--- a/mod/thmod/localisation/english/nemesis_custodian_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_custodian_l_english.yml
@@ -165,16 +165,16 @@
  GALACTIC_FOCUS:0 "โฟกัสของกาแล็กติก"
  PROPOSE_RESOLUTION_GREETINGS_EMPIRE:1 "Glory to the Galactic Imperium!"
  CANCEL_RESOLUTION_DESC:0 "$RESOLUTION|H$ is canceled"
- custodian_remaining_term_time:1 "Once their term is up, the Custodian will revert to being a Galactic Council member."
- CUSTODIAN_TERM:0 "Term"
+ custodian_remaining_term_time:1 "เมื่อหมดวาระ ผู้พิทักษ์กาแล็กติกจะกลับมาเป็นสมาชิกสภาปกครองกาแล็กติก"
+ CUSTODIAN_TERM:0 "วาระ"
  TIMER_NUMBER:1 "£time£ $NUMBER|Y$"
  INCREASE_CUSTODIAN_TERM:0 "Current Galactic Custodian term increases by $VAL|2G$ days"
  DECREASE_CUSTODIAN_TERM:0 "Current Galactic Custodian term decreases by $VAL|2R$ days"
  SET_CUSTODIAN_TERM:0 "Remaining Galactic Custodian term is set to $VAL|Y$ days"
  PERMANENT_CUSTODIAN:0 "§YPermanent§!"
  GALACTIC_FOCUS_NONE:0 "ไม่โฟกัส"
- GALACTIC_DEFENSE_FORCE_NOT_ESTABLISHED:1 "There is currently no §YGalactic Defense Force§!."
- IMPERIAL_ARMADA_NOT_ESTABLISHED:1 "There is currently no §YImperial Armada§!."
+ GALACTIC_DEFENSE_FORCE_NOT_ESTABLISHED:1 "ปัจจุบันไม่มี §Yกองกำลังป้องกันกาแล็กติก§!"
+ IMPERIAL_ARMADA_NOT_ESTABLISHED:1 "ปัจจุบันไม่มี §YImperial Armada§!"
  ESTABLISH_GALACTIC_INSTITUTION:1 "The Custodian can propose its creation through a resolution."
  ESTABLISH_IMPERIAL_INSTITUTION:1 "The ruler of the Imperium can propose its creation through a resolution."
  MESSAGE_CAN_END_SENATE_SESSION_TITLE:0 "Senate Session Can Be Concluded Prematurely"
@@ -182,19 +182,19 @@
  MESSAGE_CUSTODIAN_TERM_LIMIT_EXPIRING_TITLE:1 "Custodianship Expiring"
  MESSAGE_CUSTODIAN_TERM_LIMIT_EXPIRING_DESC:0 "Your term as Custodian will end on $END_DATE|H$. If you wish to remain Custodian, you will need to pass one of the §H$resolution_custodian_extend_custodianship$§! or the §H$resolution_custodian_perpetual_custodianship$§! resolutions."
  IMPERIAL_AUTHORITY_ENVOY_OPINION:0 "Imperial Authority Envoys: $VALUE|+=0$ ($DELTA|+=0$ per month)"
- CUSTODIAN_POWERS_LIST:0 "§HSenate Session Conclusion§!\nSenate voting sessions can be prematurely ended after half their duration.\n\n§HFreeze Resolution§!\nFreeze a resolution for $COMMUNITY_FREEZE_RESOLUTION_MONTHS|Y$ months.\n\n§HChange Galactic Focus§!\nThe Galactic Focus can be changed without having to propose a resolution.\n\n§HBorder Access to Members§!\nShips may freely enter the territory of any member."
- IMPERIUM_RULER_POWERS_LIST:0 "$CUSTODIAN_POWERS_LIST$\n\n§HCannot Be Attacked By Members§!\nImperial member states cannot wage offensive wars against us."
+ CUSTODIAN_POWERS_LIST:0 "§Hเร่งหาข้อสรุปในชั้นวุฒิสภา§!\nสามารถหาข้อสรุป(ตัดจบ)การโหวตใดก็ได้หลังจากเวลาผ่านไปครึ่งหนึ่งของระยะเวลาโหวตทั้งหมด\n\n§Hระงับการโหวต§!\nไม่ให้โหวตญัตติใดก็ได้เป็นระยะเวลา $COMMUNITY_FREEZE_RESOLUTION_MONTHS|Y$ เดือน\n\n§Hเปลี่ยนโฟกัสกาแล็กติก§!\nสามารถเปลี่ยนแปลงโฟกัสได้โดยไม่ต้องเสนอญัตติ\n\n§Hเข้าถึงเขตแดนของสมาชิก§!\nยานสามารถเข้าออกเขตแดนของสมาชิกใดก็ได้"
+ IMPERIUM_RULER_POWERS_LIST:0 "$CUSTODIAN_POWERS_LIST$\n\n§Hไม่สามารถถูกสมาชิกโจมตีได้§!\nสมาชิกอิมพีเรียลไม่สามารถทำสงครามรุกรานเราได้"
  IMPERIUM_RULER_ICON_INSTANT:0 "$COUNTRY|Y$ is the ruler of the Galactic Imperium."
  IMPERIUM_RULER_LABEL_INSTANT:0 "Imperial Authority represents the level of absolute power wielded by the $COUNTRY|Y$ in the Imperium."
- IMPERIUM_RULER_TOOLTIP_DESCRIPTION:0 "The ruler of the Imperium has the following powers:\n\n$IMPERIUM_RULER_POWERS_LIST$"
- CUSTODIAN_ICON_INSTANT:0 "$COUNTRY|Y$ is the current Custodian of the Galactic Community."
- CUSTODIAN_LABEL_INSTANT:0 "$COUNTRY|Y$ is the current Custodian of the Galactic Community."
- CUSTODIAN_TOOLTIP_DESCRIPTION:0 "The Galactic Custodian has the following powers:\n\n$CUSTODIAN_POWERS_LIST$"
+ IMPERIUM_RULER_TOOLTIP_DESCRIPTION:0 "ผู้ปกครองของจักรวรรดิกาแล็กติกอิมพีเรียมมีอำนาจดังต่อไปนี้:\n\n$IMPERIUM_RULER_POWERS_LIST$"
+ CUSTODIAN_ICON_INSTANT:0 "$COUNTRY|Y$ ปัจจุบันเป็น ผู้พิทักษ์ ของประชาคมกาแล็กติก"
+ CUSTODIAN_LABEL_INSTANT:0 "$COUNTRY|Y$ ปัจจุบันเป็น ผู้พิทักษ์ ของประชาคมกาแล็กติก"
+ CUSTODIAN_TOOLTIP_DESCRIPTION:0 "ผู้พิทักษ์กาแล็กติกมีอำนาจดังต่อไปนี้:\n\n$CUSTODIAN_POWERS_LIST$"
  SET_GALACTIC_FOCUS:0 "Select Galactic Focus"
  SET_GALACTIC_FOCUS_CUSTODIAN_DESCRIPTION:0 "The Custodian has the ability to steer the Community in a particular direction by selecting a Galactic Focus."
  SET_GALACTIC_FOCUS_EMPEROR_DESCRIPTION:0 "Their Imperial Majesty has the ability to steer the Imperium in a particular direction by selecting a Galactic Focus."
- CONFIRM_GALACTIC_FOCUS_BUTTON:0 "Change Galactic Focus"
- CHANGE_GALACTIC_FOCUS:0 "Change Galactic Focus"
+ CONFIRM_GALACTIC_FOCUS_BUTTON:0 "เปลี่ยนโฟกัสกาแล็กติก"
+ CHANGE_GALACTIC_FOCUS:0 "เปลี่ยนโฟกัสกาแล็กติก"
  NO_VALID_GALACTIC_FOCUS:0 "There are currently no situations to focus on."
  MESSAGE_CUSTODIAN_ENDED_SESSION_PREMATURELY_TITLE:0 "Senate Session Prematurely Concluded"
  MESSAGE_CUSTODIAN_ENDED_SESSION_PREMATURELY_KEY: "Galactic Custodian Concluded Senate Session"
