--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -93,6 +93,7 @@
  INTEL_INFO_intel_military_fleet_orders:0 "คำสั่งปัจจุบันของกองยานรบ"
  INTEL_INFO_intel_military_cloaked_fleets:0 "Cloaked Fleets"
  INTEL_INFO_intel_military_generals:0 "พลเอกที่ทำงาน"
+ INTEL_INFO_intel_military_commanders: "Employed Commanders"
  INTEL_INFO_intel_military_starbases:0 "ที่ตั้งของฐานอวกาศ"
  INTEL_INFO_galactic_community_vote_breakdown:0 "เหตุผลของการโหวตในประชาคมกาแล็กติก"
  INTEL_INFO_intel_military_ai_prepare_war:0 "แผนการบุกใกล้เข้ามา"
@@ -116,7 +117,7 @@
  DIPLO_PACTS_SECOND_HAND_PACTS_ONLY:0 "เรามีเฉพาะข้อมูลโดยอ้อมจากสนธิสัญญาทางการทูตเท่านั้น"
  DIPLO_PACTS_SECOND_HAND_PACTS_ONLY_TOOLTIP:0 "This Empire might have more diplomatic pacts that we do not know of yet."
  UNKNOWN_FEDERATION:0 "ไม่ทราบสหพันธ์"
- FEDERATION_CENTRALIZATION_INTEL:0 "This level of centralization will add $INTEL|Y$ to the base level of Intel provided by this Federation type, setting it to a minimum of $TOTAL|Y$."
+ FEDERATION_CENTRALIZATION_INTEL:0 "ระดับเลเวลการรวมศูนย์อำนาจนี้ จะเพิ่ม $INTEL|Y$ ให้กับระดับเลเวลพื้นฐานของข้อมูลข่าวกรองที่ได้รับจากสหพันธ์ประเภทนี้ โดยกำหนดค่าขั้นต่ำอยู่ที่ $TOTAL|Y$"
  FEDERATION_TYPE_INTEL:0 "ข่าวกรองพื้นฐานของสมาชิกสหพันธ์ถูกกำหนดขั้นต่ำที่ $INTEL|Y$ และปรับเปลี่ยนโดยการรวมอำนาจเข้าสู่ส่วนกลางของสหพันธ์"
  OPINION_BREAKDOWN_NOT_ENOUGH_INTEL:2 "Since we do not have enough Intel, we can only speculate as to their reasons."
  CANNOT_INSPECT_NO_INTEL:1 "เรามีข้อมูลไม่เพียงพอที่จะทราบการออกแบบยานของพวกเขา"
@@ -522,7 +523,7 @@
  first_contact.330.desc.disaster:0 "Our attempt to seize hostages for interrogation has gone §Hdisastrously§!!"
  first_contact.330.desc.planet:0 "$first_contact.330.desc.disaster$ A brave team of covert special forces led by [This.Leader.GetName] attempted to land on a §H[This.ContactCountry.GetName]§! colony in the §H[abduction_planet.System.GetName]§! system. However, we lost contact with them soon after they landed. At this stage, we can no longer hold out any hope that they escaped capture. Unfortunately, we may never know whether they were taken alive, or whether they were spared long hours of torture at the hands of aliens by the swift release of death."
  first_contact.330.desc.planet.gestalt:0 "$first_contact.330.desc.disaster$ A detachment of covert operations drones led by [This.Leader.GetName] attempted to land on a §H[This.ContactCountry.GetName]§! colony in the §H[abduction_planet.System.GetName]§! system. However, we lost contact with them soon after they landed. At this stage, we must assume that they were either captured or destroyed. Unfortunately, we may never know what information the enemy might have gleaned from them before their eventual demise."
- first_contact.330.desc.no_planet:0 "$first_contact.330.desc.disaster$ A brave team of covert special forces led by [This.Leader.GetName] attempted to seize a §H[This.ContactCountry.GetName]§! cargo vessel in the §H[abduction_system.GetName]§! system. However, they did not realize that their chosen target was better-armed than anticipated - nor that the enemy had several warships concealed nearby. Their ship was destroyed with all hands on deck as they sought a hasty retreat."
+ first_contact.330.desc.no_planet:1 "$first_contact.330.desc.disaster$ A brave team of covert special forces led by [This.Leader.GetName] attempted to seize a §H[This.ContactCountry.GetName]§! cargo vessel in the §H[abduction_system.GetName]§! system. However, they did not realize that their chosen target was better-armed than anticipated - nor that the enemy had several warships concealed nearby. Their ship was destroyed along with all hands as they sought a hasty retreat."
  first_contact.330.desc.no_planet.gestalt:0 "$first_contact.330.desc.disaster$ A detachment of covert operations drones led by [This.Leader.GetName] attempted to seize a small §H[This.ContactCountry.GetName]§! logistics vessel in the §H[abduction_system.GetName]§! system. However, they did not realize that their chosen target was better-armed than anticipated - nor that the enemy had several warships concealed nearby. Their ship was destroyed as they sought a hasty retreat."
  first_contact.330.A:0 "Most unfortunate..."
  first_contact.332.name:0 "$first_contact.322.name$"
