--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -279,12 +279,12 @@
  paragon.3160.c.response:0 "I am yours to command.\n\nScience remains my passion, even now. If anything, my ancestors' memories have only whetted my appetite for discovery. The galaxy is full of wonder, and there is a difference between knowing and seeing. Who knows? In time I may even see the home of my people restored from the relic it is today.\n\nBut for now, all that I have learned is yours. I look forward to applying the lessons of my people. Where am I most needed?"
  paragon.3160.d:0 "Let science remain your passion."
  paragon.3160.d.custom_tooltip:0 "§YKeides§! remains a Scientist"
- paragon.3160.e:0 "Our fleet needs you."
- paragon.3160.e.custom_tooltip:0 "§YKeides§! becomes an Admiral"
+ paragon.3160.e: "Our troops need your wisdom."
+ paragon.3160.e.custom_tooltip: "§YKeides§! becomes an Commander"
  paragon.3160.f:0 "You should govern our people."
- paragon.3160.f.custom_tooltip:0 "§YKeides§! becomes a Governor"
- paragon.3160.g:0 "The army lacks knowledge."
- paragon.3160.g.custom_tooltip:0 "§YKeides§! becomes a General"
+ paragon.3160.f.custom_tooltip:0 "§YKeides§! becomes an Official"
+ paragon.3160.g:0 "The military lacks knowledge."
+ paragon.3160.g.custom_tooltip:0 "§YKeides§! becomes a Commander"
  paragon.3160.new_focus:0 "§HKeides salutes.§!\n\nVery well. I will not fail you."
  relic_cant_activate:0 "§RThis Relic is incomplete and cannot be activated.§!"
  r_wormhole_key_fragment_1:0 "Relic Fragment (1/4)"
@@ -692,6 +692,10 @@
  councilor_defense:0 "รัฐมนตรีกลาโหม"
  councilor_defense_female:0 "$councilor_defense$"
  councilor_defense_desc:0 "The $TITLE$ is in charge of military administration."
+ councilor_state:0 "รัฐมนตรีอาวุโสแห่งรัฐ"
+ councilor_state_female:0 "$councilor_state$"
+ councilor_state_desc:0 "The $TITLE$ is in charge of diplomatic affairs."
+ BLOCKS_COUNCILOR_STATE: "Blocks the §Y$councilor_state$§! Council Position"
  councilor_agrarian_idyll:0 "เกษตรกรอาวุโส"
  councilor_agrarian_idyll_female:0 "$councilor_agrarian_idyll$"
  councilor_agrarian_idyll_desc:0 "The $TITLE$ oversees farming traditions and practices."
@@ -950,14 +954,14 @@
  councilor_worker_coop_female: "$councilor_worker_coop$"
  councilor_worker_coop_desc: "The democratically-appointed $TITLE$ ensures clear and concise communication between executive committees and our worker members."
  councilor_worker_coop_custom_modifier_desc:1 "§Y$job_steward_plural_with_icon$§! produce §G+0.25§! $r_trade_value$ and §G+0.25§! $r_amenities$"
- councilor_gestalt_governor:0 "โหนดการเพิ่มจำนวน"
- councilor_gestalt_governor_desc:1 "$TITLE$ คือที่ที่มีการตัดสินใจหลายๆสิ่งที่สำคัญๆ"
- councilor_gestalt_scientist:0 "โหนดความรู้ความเข้าใจ"
- councilor_gestalt_scientist_desc:0 "$TITLE$ คือที่ที่เราพัฒนาความเข้าใจเกี่ยวกับดาวรอบตัวเรา"
- councilor_gestalt_admiral:1 "โหนดการทหาร"
- councilor_gestalt_admiral_desc:1 "$TITLE$ คือการตัดสินใจเกี่ยวกับการขยายตัวในกาแล็กซี"
- councilor_gestalt_general:2 "โหนดควบคุมบังคับ"
- councilor_gestalt_general_desc:1 "$TITLE$ เป็นที่ที่เราตอบโต้การเกิดขึ้นของจิตสำนึกที่เบี่ยงเบน"
+ councilor_gestalt_growth:0 "Growth Node"
+ councilor_gestalt_growth_desc:1 "The $TITLE$ is where important hive decisions are made."
+ councilor_gestalt_cognitive:0 "Cognitive Node"
+ councilor_gestalt_cognitive_desc:0 "The $TITLE$ is where we develop our understanding of the world around us."
+ councilor_gestalt_legion:1 "Legion Node"
+ councilor_gestalt_legion_desc:1 "The $TITLE$ is where decisions concerning galactic expansion are made."
+ councilor_gestalt_regulatory:2 "Regulatory Node"
+ councilor_gestalt_regulatory_desc:1 "The $TITLE$ is where we counter the emergence of deviant consciousnesses."
  couniclor_machine_governor:0 "Expansion Directive"
  couniclor_machine_governor_desc:0 "$TITLE$: Units shall aquire all available worlds."
  couniclor_machine_scientist:0 "Exploration Directive"
@@ -1008,7 +1012,7 @@
  council_agenda_agenda_reorganize_council_desc:0 "เนื่องจากมีการเปลี่ยนแปลงความสนใจของรัฐบาล เราควรจัดสภาใหม่เพื่อโฟกัสเรื่องอื่นๆ"
  council_agenda_agenda_we_come_in_peace_name:0 "เรามาอย่างสันติ"
  council_agenda_agenda_we_come_in_peace_desc:0 "ตรวจสอบให้แน่ใจว่าการไม่รุกรานมีอยู่ในสังคมและความสัมพันธ์ทางการทูตของเรา"
- council_agenda_agenda_we_come_in_peace_effect_per_country:0 "$opinion_trust$: §G+$@agenda_we_come_in_peace_trust|0$§!\n"
+ council_agenda_agenda_we_come_in_peace_effect_per_country:1 "Every Non-Genocidal: §G+$@agenda_we_come_in_peace_trust|0$§! $opinion_trust$\n"
  agenda_we_come_in_peace_finish:0 "$council_agenda_agenda_we_come_in_peace_name$ $agenda_ref$"
  agenda_we_come_in_peace_finish_desc:0 "$council_agenda_agenda_we_come_in_peace_desc$"
  council_agenda_agenda_display_of_power_name:0 "การแสดงพลัง"
@@ -1125,7 +1129,7 @@
  council_agenda_agenda_leadership_conditioning_desc:0 "ผู้นำของเราทุกคนใช้เวลาและความพยายามอย่างมากในการทบทวนและฝึกพฤติกรรมใหม่"
  council_agenda_agenda_leadership_conditioning_desc_hive:1 "ทุกแง่มุมที่เป็นเอกลักษณ์และความเมตตาของผู้นำของเราถูกรวบรวมและรวมเป็นหนึ่งเดียวในจิตสำนึกที่สูงขึ้นของเรา"
  council_agenda_agenda_leadership_conditioning_desc_machine:0 "กระบวนการที่ไม่ได้มาตรฐานที่ดีที่สุดทั้งหมดจากยูนิตผู้นำ จะได้รับการวิเคราะห์ กลั่นกรองและรวมเข้ากับแกนหลักของเราในที่สุด"
- council_agenda_agenda_leadership_conditioning_effect:0 "§Yผู้นำที่มีสกิลเลเวล 1-$@agenda_leadership_conditioning_level_threshold|0$:§!\n    ได้เลเวลของสกิล\n§Yผู้นำที่มีเลเวลที่สูงขึ้น:§!\n    ได้รับค่าประสบการณ์ §Y$@agenda_leadership_conditioning_exp_reward|0$§!"
+ council_agenda_agenda_leadership_conditioning_effect: "§Y$@agenda_leadership_conditioning_exp_reward|0$§! Experience will be shared between all §YLeaders§! below §YSkill Level 10§!"
  agenda_leadership_conditioning_finish:0 "$council_agenda_agenda_leadership_conditioning_name$ $agenda_ref$"
  agenda_leadership_conditioning_finish_desc:0 "A positive long term effect from the conditioning."
  council_agenda_agenda_pioneer_politics_name:0 "นักบุกเบิกการเมือง"
@@ -1186,67 +1190,67 @@
  council_agenda_agenda_self_maintenance_desc:1 "อนุญาตการทำคลัสเตอร์และการแพตช์โปรโตคอลการปรับสภาพแวดล้อม"
  agenda_self_maintenance_finish:0 "$council_agenda_agenda_self_maintenance_name$ $agenda_ref$"
  agenda_self_maintenance_finish_desc:0 "$council_agenda_agenda_self_maintenance_desc$"
- council_agenda_agenda_gestalt_boost_governor_name:0 "ปรับปรุงการเพิ่มจำนวน"
- council_agenda_agenda_gestalt_boost_governor_desc:0 "การประสานงานของโดรนและอาณานิคมเราต้องได้รับการจัดลำดับความสำคัญ"
- agenda_gestalt_boost_governor_finish:0 "$council_agenda_agenda_gestalt_boost_governor_name$ $agenda_ref$"
- agenda_gestalt_boost_governor_finish_desc:0 "$council_agenda_agenda_gestalt_boost_governor_desc$"
- council_agenda_agenda_gestalt_boost_scientist_name:0 "ปรับปรุงความรู้ความเข้าใจ"
- council_agenda_agenda_gestalt_boost_scientist_desc:1 "การวิเคราะห์และความเข้าใจที่มีอยู่จะต้องจัดลำดับความสำคัญ"
- agenda_gestalt_boost_scientist_finish:0 "$council_agenda_agenda_gestalt_boost_scientist_name$ $agenda_ref$"
- agenda_gestalt_boost_scientist_finish_desc:0 "$council_agenda_agenda_gestalt_boost_scientist_desc$"
- council_agenda_agenda_gestalt_boost_general_name:0 "ปรับปรุงการออกคำสั่ง"
- council_agenda_agenda_gestalt_boost_general_desc:1 "ต้องให้ความสำคัญกับมาตรการป้องกันไว้ก่อน"
- agenda_gestalt_boost_general_finish:0 "$council_agenda_agenda_gestalt_boost_general_name$ $agenda_ref$"
- agenda_gestalt_boost_general_finish_desc:0 "$council_agenda_agenda_gestalt_boost_general_desc$"
- council_agenda_agenda_gestalt_boost_admiral_name:0 "ปรับปรุงการขยายออก"
- council_agenda_agenda_gestalt_boost_admiral_desc:0 "การควบคุมอาณาเขตของเราในอวกาศต้องได้รับการจัดลำดับความสำคัญ"
- agenda_gestalt_boost_admiral_finish:0 "$council_agenda_agenda_gestalt_boost_admiral_name$ $agenda_ref$"
- agenda_gestalt_boost_admiral_finish_desc:0 "$council_agenda_agenda_gestalt_boost_admiral_desc$"
+ council_agenda_agenda_gestalt_boost_growth_name:0 "Growth Revision"
+ council_agenda_agenda_gestalt_boost_growth_desc:0 "Coordinating our drones and colonies must be prioritized."
+ agenda_gestalt_boost_growth_finish:0 "$council_agenda_agenda_gestalt_boost_growth_name$ $agenda_ref$"
+ agenda_gestalt_boost_growth_finish_desc:0 "$council_agenda_agenda_gestalt_boost_growth_desc$"
+ council_agenda_agenda_gestalt_boost_cognitive_name:0 "Cognitive Revision"
+ council_agenda_agenda_gestalt_boost_cognitive_desc:1 "Analysis and existential understanding must be prioritized."
+ agenda_gestalt_boost_cognitive_finish:0 "$council_agenda_agenda_gestalt_boost_cognitive_name$ $agenda_ref$"
+ agenda_gestalt_boost_cognitive_finish_desc:0 "$council_agenda_agenda_gestalt_boost_cognitive_desc$"
+ council_agenda_agenda_gestalt_boost_regulatory_name:0 "Order Revision"
+ council_agenda_agenda_gestalt_boost_regulatory_desc:1 "Preemptive measures must be prioritized."
+ agenda_gestalt_boost_regulatory_finish:0 "$council_agenda_agenda_gestalt_boost_regulatory_name$ $agenda_ref$"
+ agenda_gestalt_boost_regulatory_finish_desc:0 "$council_agenda_agenda_gestalt_boost_regulatory_desc$"
+ council_agenda_agenda_gestalt_boost_legion_name:0 "Expansion Revision"
+ council_agenda_agenda_gestalt_boost_legion_desc:0 "Controlling the boundaries of our territory in space must be prioritized."
+ agenda_gestalt_boost_legion_finish:0 "$council_agenda_agenda_gestalt_boost_legion_name$ $agenda_ref$"
+ agenda_gestalt_boost_legion_finish_desc:0 "$council_agenda_agenda_gestalt_boost_legion_desc$"
  council_agenda_agenda_gestalt_purge_traits_name:0 "การแบ่งครึ่งและแก้ไขให้ถูกต้อง"
  council_agenda_agenda_gestalt_purge_traits_desc:1 "จุดที่ทำให้ข้อมูลไม่แน่นอนและข้อสรุปที่ผิดพลาด ขัดขวางทักษะการให้เหตุผลของเรา เราต้องกำจัดข้อมูลที่ซ้ำซ้อนเหล่านั้นทั้งหมด"
  council_agenda_agenda_gestalt_purge_traits_effect_desc:1 "ลบ §Hคุณลักษณะเชิงลบ§! จากโหนดผู้ปกครองและโหนดสมาชิกสภา\nคุณลักษณะที่ถูกนำออกแต่ละครั้ง จะเสียค่าประสบการณ์ §R$@agenda_gestalt_purge_traits_exp_change|0$§!"
  agenda_gestalt_purge_traits_finish:0 "$council_agenda_agenda_gestalt_purge_traits_name$ $agenda_ref$"
  agenda_gestalt_purge_traits_finish_desc:0 "$council_agenda_agenda_gestalt_purge_traits_desc$"
- agenda_hive_restore_governor_finish: "$council_agenda_agenda_hive_restore_governor_name$ $agenda_ref$"
- agenda_hive_restore_governor_finish_desc: "$council_agenda_agenda_hive_restore_governor_desc$"
- agenda_hive_restore_scientist_finish: "$council_agenda_agenda_hive_restore_scientist_name$ $agenda_ref$"
- agenda_hive_restore_scientist_finish_desc: "$council_agenda_agenda_hive_restore_scientist_desc$"
- agenda_hive_restore_general_finish: "$council_agenda_agenda_hive_restore_admiral_name$ $agenda_ref$"
- agenda_hive_restore_general_finish_desc: "$council_agenda_agenda_hive_restore_admiral_desc$"
- agenda_hive_restore_admiral_finish: "$council_agenda_agenda_hive_restore_general_name$ $agenda_ref$"
- agenda_hive_restore_admiral_finish_desc: "$council_agenda_agenda_hive_restore_general_desc$"
- agenda_machine_restore_governor_finish: "$council_agenda_agenda_machine_restore_governor_name$ $agenda_ref$"
- agenda_machine_restore_governor_finish_desc: "$council_agenda_agenda_machine_restore_governor_desc$"
- agenda_machine_restore_scientist_finish: "$council_agenda_agenda_machine_restore_scientist_name$ $agenda_ref$"
- agenda_machine_restore_scientist_finish_desc: "$council_agenda_agenda_machine_restore_scientist_desc$"
- agenda_machine_restore_general_finish: "$council_agenda_agenda_machine_restore_admiral_name$ $agenda_ref$"
- agenda_machine_restore_general_finish_desc: "$council_agenda_agenda_machine_restore_admiral_desc$"
- agenda_machine_restore_admiral_finish: "$council_agenda_agenda_machine_restore_general_name$ $agenda_ref$"
- agenda_machine_restore_admiral_finish_desc: "$council_agenda_agenda_machine_restore_general_desc$"
+ agenda_hive_restore_growth_finish: "$council_agenda_agenda_hive_restore_growth_name$ $agenda_ref$"
+ agenda_hive_restore_growth_finish_desc: "$council_agenda_agenda_hive_restore_growth_desc$"
+ agenda_hive_restore_cognitive_finish: "$council_agenda_agenda_hive_restore_cognitive_name$ $agenda_ref$"
+ agenda_hive_restore_cognitive_finish_desc: "$council_agenda_agenda_hive_restore_cognitive_desc$"
+ agenda_hive_restore_regulatory_finish: "$council_agenda_agenda_hive_restore_regulatory_name$ $agenda_ref$"
+ agenda_hive_restore_regulatory_finish_desc: "$council_agenda_agenda_hive_restore_regulatory_desc$"
+ agenda_hive_restore_legion_finish: "$council_agenda_agenda_hive_restore_legion_name$ $agenda_ref$"
+ agenda_hive_restore_legion_finish_desc: "$council_agenda_agenda_hive_restore_legion_desc$"
+ agenda_machine_restore_growth_finish: "$council_agenda_agenda_machine_restore_growth_name$ $agenda_ref$"
+ agenda_machine_restore_growth_finish_desc: "$council_agenda_agenda_machine_restore_growth_desc$"
+ agenda_machine_restore_cognitive_finish: "$council_agenda_agenda_machine_restore_cognitive_name$ $agenda_ref$"
+ agenda_machine_restore_cognitive_finish_desc: "$council_agenda_agenda_machine_restore_cognitive_desc$"
+ agenda_machine_restore_regulatory_finish: "$council_agenda_agenda_machine_restore_regulatory_name$ $agenda_ref$"
+ agenda_machine_restore_regulatory_finish_desc: "$council_agenda_agenda_machine_restore_regulatory_desc$"
+ agenda_machine_restore_legion_finish: "$council_agenda_agenda_machine_restore_legion_name$ $agenda_ref$"
+ agenda_machine_restore_legion_finish_desc: "$council_agenda_agenda_machine_restore_legion_desc$"
  mod_restored_node_bonus_skill: "โหนดฟื้นฟู เพิ่มสกิล"
- mod_restored_admiral_node_bonus_skill: "$councilor_gestalt_admiral_with_icon$ฟื้นฟู เพิ่มสกิล"
- mod_restored_general_node_bonus_skill: "$councilor_gestalt_general_with_icon$ฟื้นฟู เพิ่มสกิล"
- mod_restored_governor_node_bonus_skill: "$councilor_gestalt_governor_with_icon$ฟื้นฟู เพิ่มสกิล"
- mod_restored_scientist_node_bonus_skill: "$councilor_gestalt_scientist_with_icon$ฟื้นฟู เพิ่มสกิล"
+ mod_restored_legion_node_bonus_skill: "Restored $councilor_gestalt_legion_with_icon$ Additional Skill"
+ mod_restored_regulatory_node_bonus_skill: "Restored $councilor_gestalt_regulatory_with_icon$ Additional Skill"
+ mod_restored_growth_node_bonus_skill: "Restored $councilor_gestalt_growth_with_icon$ Additional Skill"
+ mod_restored_cognitive_node_bonus_skill: "Restored $councilor_gestalt_cognitive_with_icon$ Additional Skill"
  create_new_node: "\nสิ่งนี้จะสร้าง §Y[GetName]§! ใหม่ สกิล [GetRestoredNodeSkill]"
  hive_restore_node_effect: "This Node will be culled.$create_new_node$"
- council_agenda_agenda_hive_restore_governor_name: "คัดเลือก $councilor_gestalt_governor$"
- council_agenda_agenda_hive_restore_governor_desc: "Our $councilor_gestalt_governor$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_scientist_name: "คัดเลือก $councilor_gestalt_scientist$"
- council_agenda_agenda_hive_restore_scientist_desc: "Our $councilor_gestalt_scientist$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_admiral_name: "คัดเลือก $councilor_gestalt_admiral$"
- council_agenda_agenda_hive_restore_admiral_desc: "Our $councilor_gestalt_admiral$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_general_name: "คัดเลือก $councilor_gestalt_general$"
- council_agenda_agenda_hive_restore_general_desc: "Our $councilor_gestalt_general$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_growth_name: "Cull $councilor_gestalt_growth$"
+ council_agenda_agenda_hive_restore_growth_desc: "Our $councilor_gestalt_growth$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_cognitive_name: "Cull $councilor_gestalt_cognitive$"
+ council_agenda_agenda_hive_restore_cognitive_desc: "Our $councilor_gestalt_cognitive$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_legion_name: "Cull $councilor_gestalt_legion$"
+ council_agenda_agenda_hive_restore_legion_desc: "Our $councilor_gestalt_legion$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_regulatory_name: "Cull $councilor_gestalt_regulatory$"
+ council_agenda_agenda_hive_restore_regulatory_desc: "Our $councilor_gestalt_regulatory$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
  machine_restore_node_effect: "This Node will be reformatted.$create_new_node$"
- council_agenda_agenda_machine_restore_governor_name: "ฟอร์แมต $councilor_gestalt_governor$ ใหม่"
- council_agenda_agenda_machine_restore_governor_desc: "Our $councilor_gestalt_governor$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_scientist_name: "ฟอร์แมต $councilor_gestalt_scientist$ ใหม่"
- council_agenda_agenda_machine_restore_scientist_desc: "Our $councilor_gestalt_scientist$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_admiral_name: "ฟอร์แมต $councilor_gestalt_admiral$ ใหม่"
- council_agenda_agenda_machine_restore_admiral_desc: "Our $councilor_gestalt_admiral$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_general_name: "ฟอร์แมต $councilor_gestalt_general$ ใหม่"
- council_agenda_agenda_machine_restore_general_desc: "Our $councilor_gestalt_general$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
+ council_agenda_agenda_machine_restore_growth_name: "Reformat $councilor_gestalt_growth$"
+ council_agenda_agenda_machine_restore_growth_desc: "Our $councilor_gestalt_growth$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
+ council_agenda_agenda_machine_restore_cognitive_name: "Reformat $councilor_gestalt_cognitive$"
+ council_agenda_agenda_machine_restore_cognitive_desc: "Our $councilor_gestalt_cognitive$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
+ council_agenda_agenda_machine_restore_legion_name: "Reformat $councilor_gestalt_legion$"
+ council_agenda_agenda_machine_restore_legion_desc: "Our $councilor_gestalt_legion$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
+ council_agenda_agenda_machine_restore_regulatory_name: "Reformat $councilor_gestalt_regulatory$"
+ council_agenda_agenda_machine_restore_regulatory_desc: "Our $councilor_gestalt_regulatory$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
  restore_gestalt_councilor_effect_tooltip: "[GetRestoreNodeEffectTooltip]"
  tech_node_culling_1: "โหนดคัดเลือกขั้นพื้นฐาน"
  tech_node_culling_1_desc: "As the galactic stage evolves, so too should our operational instincts. Any evolutionary niche that no longer gives an advantage will be culled."
