--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -806,7 +806,7 @@
  tech_artificial_moral_codes_desc:1 "It is circumstance that dictates what is moral. Define the circumstances, and ethics is like clay in your hands."
  tech_synthetic_thought_patterns:0 "รูปแบบความคิดสังเคราะห์"
  tech_synthetic_thought_patterns_desc:2 "Thinking outside the box merely places you in another, somewhat larger box."
- edict_will_to_power:1 "ความปรารถนาอันแรงกล้า: เจตจำนงที่จะมีอำนาจ"
+ edict_will_to_power:1 "ความปรารถนาฯ: เจตจำนงที่จะมีอำนาจ"
  edict_will_to_power_desc:1 "As power is simply the ability to impose one's will on others, the will to power is a self-fulfilling prophecy."
  tech_unity_of_purpose:0 "จุดมุ่งหมายเดียวกัน"
  tech_unity_of_purpose_desc:0 "The purpose of one is the purpose of all. Together, we are greater than the sum of our parts."
@@ -913,7 +913,7 @@
  tech_repeatable_naval_cap:0 "กระบวนการขั้นตอนการจัดการกองยาน"
  tech_repeatable_naval_cap_desc:0 "Improved fleet management procedures will free up the resources needed to maintain a bigger fleet."
  tech_repeatable_command_limit:0 "เจ้าหน้าที่สนับสนุนทหารยานรบ"
- tech_repeatable_command_limit_desc:0 "Improving the support staff available to our admirals will increase the number of ships they can command in a single fleet."
+ tech_repeatable_command_limit_desc:0 "Improving the support staff available to our commanders will increase the number of ships they can lead in a single fleet."
  tech_pirate_starting:0 "Pirate Only Tech"
  tech_pirate_starting_desc:0 ""
  tech_event_crystal_sonar:0 "Hidden"
