--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -155,7 +155,7 @@
  tradition_synchronicity:0 "ความสอดคล้องกัน"
  tradition_synchronicity_desc:0 "ความสามัคคีของจิตใจก่อให้เกิดเอกภาพของความมุ่งหมาย เราต้องพยายามดำเนินการให้สอดคล้องกันในทุกความพยายาม"
  tr_synchronicity_adopt:0 "วัฒนธรรมความสอดคล้องกัน"
- tr_synchronicity_adopt_desc:0 "$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_governor_name$\n$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_scientist_name$\n$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_general_name$\n$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_admiral_name$\n$mod_planet_pops_upkeep_mult$: §G-10%§!"
+ tr_synchronicity_adopt_desc:0 "$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_growth_name$\n$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_cognitive_name$\n$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_regulatory_name$\n$UNLOCKS_AGENDA$ $council_agenda_agenda_gestalt_boost_legion_name$\n$mod_planet_pops_upkeep_mult$: §G-10%§!"
  tr_synchronicity_cloned_organs:0 "โคลนอวัยวะ"
  tr_synchronicity_cloned_organs_delayed:0 "The cloning vats mass-produce the more frequently consumed organs like hearts and lungs, increasing the usable lifespan of high-priority drones."
  tr_synchronicity_kinship_gestalt:0 "การเชื่อมต่อควบคุมเจ้าหน้าที่ (การซิงค์)"
@@ -226,7 +226,7 @@
  tr_supremacy_master_shipwrights_machine_delayed:0 "With a large inventory of prefabricated hull sections, built to be interchangeable, our fleet construction effort will be rationalized."
  tr_supremacy_war_games:0 "เกมสงคราม"
  tr_supremacy_war_games_desc:4 "§Y$MOD_COMMAND_LIMIT_ADD$§! เพิ่มขึ้น §G+20§! และ §Y$MOD_LEADER_ADMIRAL_SKILL_LEVELS$§! เพิ่มขึ้น §Y2§!"
- tr_supremacy_war_games_delayed:0 "A strong war game tradition has taken root among the senior officers of our fleets, whether the games be computer simulations or actual exercises in space. This has encouraged our admirals to think outside the box, resulting in numerous tactical innovations and new strategies."
+ tr_supremacy_war_games_delayed:0 "A strong war game tradition has taken root among the senior officers of our fleets, whether the games be computer simulations or actual exercises in space. This has encouraged our commanders to think outside the box, resulting in numerous tactical innovations and new strategies."
  tr_supremacy_war_games_machine_desc:0 "$tr_supremacy_war_games_desc$"
  tr_supremacy_war_games_machine:0 "ลดผลกระทบจากตัวแปรที่เกี่ยวกับการรบ"
  tr_supremacy_war_games_machine_delayed:0 "High speed calculation of thousands of possible battle outcomes, updated in real time, helps reduce the unpredictability of a general fleet action to more manageable levels."
@@ -671,7 +671,7 @@
  tr_aptitude_champions_of_the_empire_hive_delayed:0 "The Hive is willing to impart a minute level of autonomy for its strongest elements for the good of the whole."
  tr_aptitude_champions_of_the_empire_machine:0 "สิทธิ์ของผู้ดูแลระบบ"
  tr_aptitude_champions_of_the_empire_machine_delayed:0 "We trust the unique sub-routines of our leaders and give them permission to influence how the Empire is run."
- tr_aptitude_champions_of_the_empire_desc:1 "$admiral_with_icon$ และ $general_with_icon$ แต่ละเลเวล\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\n$governor_with_icon$ แต่ละเลเวล\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2§!\n$scientist_with_icon$ แต่ละเลเวล\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
+ tr_aptitude_champions_of_the_empire_desc:1 "Per $commander_with_icon$ and $general_with_icon$ level\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$ level\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2§!\nPer $scientist_with_icon$ level\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
  tradition_statecraft:0 "การปกครอง"
  tradition_statecraft_desc:0 "สภาที่ทรงพลังช่วยให้จักรวรรดิของเราตอบสนองได้มากขึ้น"
  tradition_statecraft_hive_desc:0 "The Council of Voices defines our empire."
@@ -705,20 +705,20 @@
  tr_statecraft_shared_benefits_delayed:0 "By involving all leaders in the implementation of our agendas, they build a stronger understanding for their roles and purpose."
  tr_statecraft_shared_benefits_hive_delayed:0 "By utilizing all nodes and leaders in the implementation of our agendas, any useful specialization is propagated faster."
  tr_statecraft_shared_benefits_machine_delayed:0 "$tr_statecraft_shared_benefits_hive_delayed$"
- tr_statecraft_shared_benefits_desc:0 "เมื่อใดก็ตามที่เริ่ม §Yแผน§!:\n$t$$tr_statecraft_shared_benefits_effect_desc$"
- tr_statecraft_shared_benefits_effect_desc:0 "ผู้นำทุกคนได้รับค่าประสบการณ์ $@statecraft_amongst_peers_exp_reward|G0$"
+ tr_statecraft_shared_benefits_desc:0 "Whenever an §YAgenda§! is Launched:\n$t$$tr_statecraft_amongst_peers_effect_desc$"
+ tr_statecraft_amongst_peers_effect_desc:1 "All Councilors gain $@statecraft_amongst_peers_exp_reward|G0$ Experience per Skill Level"
  tradition_politics:0 "การเมือง"
  tradition_politics_desc:0 "เวทีการเมืองกาแล็กซีถูกกำหนดขึ้นและเราตั้งใจที่จะมีบทบาทนำ"
  tr_politics_adopt:0 "วัฒนธรรม$tradition_politics$"
- tr_politics_adopt_desc:0 "ทูต §G+1§!\nทูตที่ประจำอยู่ที่ §Yประชาคมกาแล็กติก§! จะผลิต £influence£ §Yอิทธิพล§! 0.1"
+ tr_politics_adopt_desc:1 "§G+1§! Envoy\n$official_plural_with_icon$ assigned to the §Y[GetGalCommunityOrGalImperium]§! now produce 0.1 £influence£ §YInfluence§! per §YSkill Level§!."
  tr_politics_finish:0 "$tr_politics_adopt$ เสร็จ"
- tr_politics_finish_desc:0 "£diplo_weight£ น้ำหนักทางการทูต §G+10%§!\nปลดล็อก 4 §Yญัตติพิเศษ§! ในประชาคมกาแล็กติก\n$TRADITIONS_FINISH_AP$"
+ tr_politics_finish_desc:1 "§G+10%§! £diplo_weight£ Diplomatic Weight\nUnlocks 4 special §YResolutions§! in the §Y[GetGalCommunityOrGalImperium]§!.\n$TRADITIONS_FINISH_AP$"
  tr_politics_quid_pro_quo:0 "สิ่งนี้เพื่อสิ่งนั้น/ยื่นหมูยื่นแมว"
  tr_politics_quid_pro_quo_desc:0 "เมื่อญัตติที่คุณสนับสนุนผ่าน จะได้รับ 1 §Yบุญคุณ§! จากจักรวรรดิที่เสนอญัตตินั้น"
  tr_politics_quid_pro_quo_delayed:0 "Carefully worded rhetoric will make it clear that our support comes at a cost. Those we help owe us, and one day, we will collect."
  MESSAGE_FAVOR_GAINED_POLITICS_TRADITION_DESC:0 "Since we supported their resolution, the $WHO|Y$ now owes us a §YFavor§!."
  tr_politics_gravitas:0 "ดึงดูดเข้าหา"
- tr_politics_gravitas_desc:0 "£influence£ §Yอิทธิพล§! ที่ใช้เพื่อยับยั้งมติหรือเสนอญัตติ §G-25%§!\n§Yทูต§! แต่ละคนที่ประจำอยู่ที่ประชาคมกาแล็กติกจะเพิ่ม £diplo_weight£ น้ำหนักทางการทูตเพิ่มเติมอีก §G2.5%§!"
+ tr_politics_gravitas_desc:1 "§G-25%§! £influence£ §YInfluence§! cost to veto or propose Resolutions\n$official_plural_with_icon$ assigned to the §Y[GetGalCommunityOrGalImperium]§! provide an additional §G2.5%§! £diplo_weight£ Diplomatic Weight per §YSkill Level§!."
  tr_politics_gravitas_delayed:0 "Politics is the art of illusions. By showing others what they want to see, we'll grow our influence in the community."
  tr_politics_extraordinary_powers:0 "อำนาจพิเศษ"
  tr_politics_extraordinary_powers_desc:0 "£time£ §Yคูลดาวน์§! มาตรการฉุกเฉินและการยับยั้งมติในสภาจักรวรรดิ §G-25%§!"
@@ -727,8 +727,8 @@
  tr_politics_national_agenda_desc:0 "เมื่อญัตติที่คุณเสนอผ่าน จะได้รับ £unity£ §Yเอกภาพ§! เป็นเวลา 18 เดือน"
  tr_politics_national_agenda_delayed:0 "Our victories on the Senate floor should be celebrated: they bring us ever closer to a better future."
  tr_politics_persistent_petitioners:0 "ยืนกรานยื่นคำร้อง"
- tr_politics_persistent_petitioners_desc:0 "จักรวรรดิใดที่ลงมติให้ญัตติที่คุณเสนอผ่าน จักรวรรดิเหล่านั้นจะได้รับ £diplo_weight£ น้ำหนักทางการทูต §G+25%§! จนกว่าญัตติของคุณจะผ่าน"
- tr_politics_persistent_petitioners_delayed:0 "Our delegations in the Galactic Community are extremely persistent, and will not take "No" for an answer. It might take time, but we will obtain what we deserve."
+ tr_politics_persistent_petitioners_desc:1 "จักรวรรดิใดที่ลงมติให้ญัตติที่คุณเสนอผ่าน จักรวรรดิเหล่านั้นจะได้รับ £diplo_weight£ น้ำหนักทางการทูต §G+25%§! จนกว่าญัตติของคุณจะผ่าน"
+ tr_politics_persistent_petitioners_delayed:1 "Our delegates in the §Y[GetGalCommunityOrGalImperium]§! are extremely persistent, and will not take "No" for an answer. It might take time, but we will obtain what we deserve."
  persistent_petitioners:0 "$tr_politics_persistent_petitioners$"
  tradition_enmity: "ความเป็นปฏิปักษ์"
  tradition_enmity_desc: "[Root.GetSpeciesNamePlural] มักจะทำงานหนักขึ้น เมื่ออยู่ในสภาพแวดล้อมที่มีการแข่งขัน และพยายามตาม [Root.GetSpeciesNamePlural] คนอื่นให้ทัน การแข่งขันเป็นแรงจูงใจอันทรงพลังทำให้ผู้คนทำงานหนักขึ้นและบรรลุเป้าหมายได้"
@@ -739,7 +739,7 @@
  tr_enmity_finish_desc: "ทูตที่มี: §G+1§!\nปลดล็อกท่าทีทางการทูต §Yเป็นปฏิปักษ์§!\n$TRADITIONS_FINISH_AP$"
  tr_enmity_rise_to_the_occasion: "ทำให้ดีขึ้นเพื่อตอบสนองต่อสถานการณ์"
  tr_enmity_rise_to_the_occasion_delayed: "In the face of an ever-increasing number of adversaries, we stand united."
- tr_enmity_rise_to_the_occasion_effect: "ความจุของผู้นำต่อจำนวนคู่แข่ง: §G+0.5§!"
+ tr_enmity_rise_to_the_occasion_effect: "$mod_country_official_cap_add$ per Rival: §G+0.50§!\n$mod_country_commander_cap_add$ per Rival: §G+0.50§!\n$mod_country_scientist_cap_add$ per Rival: §G+0.50§!"
  tr_enmity_consumate_contrarian: "อยู่ตรงกันข้ามโดยสิ้นเชิง"
  tr_enmity_consumate_contrarian_delayed: "Blocking the plans of the opposition can be just as satisfying as enacting one's own."
  tr_enmity_match: "การแข่งขัน"
@@ -750,8 +750,8 @@
  tr_enmity_eclipse: "การบดบังรัศมี"
  tr_enmity_eclipse_delayed: "Third, cast a shadow over your adversary once and for all."
  tr_enmity_eclipse_effect: "ได้รับ $r_research$ และผลผลิต $r_unity$ เพิ่มขึ้น §G2%§! ต่อจำนวน §Yคู่แข่ง§! เป็นเวลา §Y10§! ปี หลังจากชนะ §Yสงครามดูถูกเหยียดหยาม§!"
- enmity_humiliate: "[GetName] gets the §YReaffirmed Superiority§! modifier for §Y10§! years granting them §G2%§! increased $r_research$ and $r_unity$ output per §YRival§!."
- reaffirmed_superiority: "Reaffirmed Superiority"
+ enmity_humiliate: "[GetName] ได้รับการปรับเปลี่ยน §Yยืนยันความเหนือกว่าอีกครั้ง§! เป็นเวลา §Y10§! ปี ได้รับ $r_research$ และผลผลิต $r_unity$ เพิ่ม §G2%§! ต่อจำนวน §Yคู่แข่ง§!"
+ reaffirmed_superiority: "ยืนยันความเหนือกว่าอีกครั้ง"
  reaffirmed_superiority_desc: "Our superiority is unassailable. No one is greater than the [GetName]."
  requires_tradition_the_federation:1 "$TRIGGER_FAIL$§Rต้องการ §Yสหพันธ์§! ที่อยู่ในวัฒนธรรมการทูต§!"
  requires_tradition_universal_compatibility:0 "§Rต้องการ §Yความเข้ากันได้สากล§! ที่อยู่ในวัฒนธรรมความสามารถรอบตัว§!"
@@ -770,12 +770,12 @@
  requires_not_ap_organo_machine_interfacing:0 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_organo_machine_interfacing$§!"
  requires_ap_mind_over_matter:2 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_mind_over_matter$§! หรือมีจุดเริ่มต้น §Y$origin_shroudwalker_apprentice$§!"
  requires_not_ap_mind_over_matter:1 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_mind_over_matter$§!"
- allow_decision_mastery_of_nature:1 "§Yปลดล็อกการตัดสินใจ:§! ความเชี่ยวชาญในธรรมชาติ"
- describe_decision_mastery_of_nature:0 "§Eนี่คือการตัดสินใจที่เพิ่มจำนวนเขตสูงสุดที่ดาวเคราะห์สามารถรองรับได้ §Y2§! (สามารถทำได้เพียงครั้งเดียวบนดาวเคราะห์แต่ละดวง)§!"
- decision_mastery_of_nature:0 "ความเชี่ยวชาญในธรรมชาติ"
- decision_mastery_of_nature_desc:0 "Our population requires room to grow, and so we shall make that room. Nature must not stand in the way of progress."
+ describe_decision_mastery_of_nature:1 "§YUnlocks Decision:§! Mastery of Nature$TABBED_NEW_LINE$- Max Districts §Y+2§! $TABBED_NEW_LINE$- Max Resource Districts from Planetary Features §G+50%§!"
+ decision_mastery_of_nature:1 "ความเชี่ยวชาญในธรรมชาติ"
+ decision_mastery_of_nature_desc:0 "Our civilization requires room to grow, so we shall make that room. Nature must not stand in the way of progress."
  mastery_of_nature:0 "$decision_mastery_of_nature$"
  mastery_of_nature_desc:0 "$decision_mastery_of_nature_desc$"
+ mastery_of_nature_effects: "- Max Districts §Y+2§!\n- Max Resource Districts §G+50%§!"
  requires_ap_voidborn_OR_ap_galactic_wonders:1 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_voidborn$§! หรือ §Y$ap_galactic_wonders$§!"
  requires_technology_housing_2:0 "$TRIGGER_FAIL$ ต้องการ £engineering£ เทคโนโลยี §Y$tech_housing_2$§!"
  requires_technology_zero_point_power:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £physics£ §Y$tech_zero_point_power$§!"
