--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -484,6 +484,8 @@
  IS_NOT_SAME_POP:0 "Is NOT same pop as $OTHER$"
  HAS_EVENT_CHAIN_TRIGGER:0 "Has the $NAME|Y$ Event Chain"
  HAS_NOT_EVENT_CHAIN_TRIGGER:1 "Does NOT have the $NAME|Y$ Event Chain"
+ HAS_COMPLETED_EVENT_CHAIN_TRIGGER:0 "Has completed the $NAME|Y$ Event Chain"
+ HAS_NOT_COMPLETED_EVENT_CHAIN_TRIGGER:0 "Did NOT complete the $NAME|Y$ Event Chain"
  IS_NOT_POP_CATEGORY:0 "Is NOT $CATEGORY$"
  IS_POP_CATEGORY:0 "Is $CATEGORY$"
  NOT_HAS_JOB_CATEGORY:1 "Job is NOT $CATEGORY$"
@@ -607,7 +609,8 @@
  HAS_NOT_TRUCE_TRIGGER:0 "$COUNTRY|Y$ ไม่มีการพักรบกับ $TARGET|Y$"
  HAS_TRUCE_TRIGGER:0 "$COUNTRY|Y$ has truce with $TARGET|Y$"
  SET_LEADER_AGE_EFFECT:0 "Change the age to $AGE|Y$"
- ADD_LEADER_AGE_EFFECT:0 "เปลี่ยนอายุผู้นำ $AGE|Y$ ปี"
+ ADD_LEADER_AGE_EFFECT:1 "Leader advances in age by $AGE|Y$ years"
+ SUB_LEADER_AGE_EFFECT: "Leader is now $AGE|Y$ years younger"
  SET_LEADER_IMMORTAL_EFFECT:0 "Becomes immortal"
  SET_LEADER_MORTAL_EFFECT:0 "Becomes mortal"
  IS_IMMORTAL_TRIGGER:0 "Is immortal"
@@ -1078,7 +1081,7 @@
  ADD_RESEARCH_OPTION_EFFECT:1 "ได้รับตัวเลือกการวิจัย:\n$TECH|Y$\n"
  ADD_TECH_PROGRESS_EFFECT:1 "ได้รับความก้าวหน้าเทคโนโลยี:\n    $TECH|Y$ §G+$VALUE|%0$§!\n"
  ENABLE_SPECIAL_PROJECT:0 "ออกโครงการพิเศษ: $PROJECT_NAME|Y$\n"
- SET_OWNER_EFFECT:2 "$OWNER|Y$ becomes the new owner of $OBJECT|Y$\n"
+ SET_OWNER_EFFECT:2 "$OWNER|Y$ กลายเป็นเจ้าของใหม่ของ $OBJECT|Y$\n"
  SET_CONTROLLER_EFFECT:0 "§Y$CONTROLLER$§! becomes controller\n"
  ADD_RESOURCE_EFFECT:0 "ได้รับ$RESOURCE$: £$KEY$£ $NUM|0$\n"
  ADD_PHYSICS_RESEARCH_EFFECT:0 "$VALUE$ Physics research\n"
@@ -1106,6 +1109,7 @@
  GO_TO_NEXT_PRE_FTL_AGE:0 "Advances $COUNTRY|Y$ to the next Pre-FTL technology level\n"
  SET_PRE_FTL_AGE:0 "Sets the Pre-FTL technology level for $COUNTRY|Y$ to the $AGE|Y$\n"
  CREATE_POP:1 "ประชากร $SPECIES|Y$ เพิ่ม 1\n"
+ CREATE_POP_MULTIPLE: "$QUANTITY$ $SPECIES|Y$ Pops are created\n"
  BUILD_POP:0 "One buildable Pop is built\n"
  MODIFY_DEVELOPMENT_POS:0 "Increase infrastructure by $VALUE|Y$\n"
  MODIFY_DEVELOPMENT_NEG:0 "Reduce infrastructure by $VALUE|Y$\n"
@@ -1126,11 +1130,11 @@
  CLEAR_PLANET_MODIFIERS_EFFECT:0 "Clear planet modifiers\n"
  UNLOCKS_NEXT_TECH_TREE:0 "Unlocks a technology in §Y$TREE$§!\n"
  ADD_EXPERIENCE:1 "ได้ค่าประสบการณ์ $AMOUNT|0Y$\n"
- ADD_CIVIC:0 "Add civic $CIVIC|Y$\n"
+ ADD_CIVIC:0 "เพิ่มสมบัติพลเมือง $CIVIC|Y$\n"
  REMOVE_CIVIC:0 "Remove civic $CIVIC|Y$\n"
  SET_ORIGIN:0 "Origin set to $ORIGIN|Y$\n"
  SET_GOVERNMENT_COOLDOWN_EFFECT:0 "Government is locked for $DAYS$ days\n"
- REMOVE_GOVERNMENT_COOLDOWN_EFFECT:0 "Government is unlocked\n"
+ REMOVE_GOVERNMENT_COOLDOWN_EFFECT:0 "ปลดล็อกการปกครอง\n"
  RESET_POLICY_COOLDOWNS_EFFECT:1 "ปลดล็อกนโยบาย\n"
  UNLOCK_COUNCIL_SLOT:0 "ปลดล็อกช่องสมาชิกสภา $AMOUNT|Y$ ช่อง"
  ADD_SKILL:1 "สกิลเลเวลของ $LEADER$ เปลี่ยน $AMOUNT|Y$\n"
@@ -1193,11 +1197,11 @@
  DECLARE_WAR_EFFECT:1 "$FIRST|Y$ ประกาศสงครามกับ $SECOND|Y$\n"
  ADD_CLAIMS_EFFECT:0 "$COUNTRY|Y$ lays claim to $SYSTEM|Y$."
  REMOVE_CLAIMS_EFFECT:0 "$COUNTRY|Y$ loses their claim to $SYSTEM|Y$."
- JOIN_WAR_EFFECT:0 "$FIRST|Y$ joins $SECOND|Y$ as an ally in their wars."
+ JOIN_WAR_EFFECT:0 "$FIRST|Y$ เข้าร่วมกับ $SECOND|Y$ เป็นพันธมิตรในสงครามของพวกเขา"
  AN_ATTACKER:0 "an attacker"
  A_DEFENDER:0 "a defender"
  JOIN_WAR_ON_SIDE_EFFECT:1 "$FIRST|Y$ joins as $SIDE$ in the war against $ENEMY|Y$."
- JOIN_WAR_ON_SIDE_COUNTRY_EFFECT:0 "$FIRST|Y$ joins $SECOND|Y$ as an ally in their war against $ENEMY|Y$."
+ JOIN_WAR_ON_SIDE_COUNTRY_EFFECT:0 "$FIRST|Y$ เข้าร่วมกับ $SECOND|Y$ เป็นพันธมิตรในการทำสงครามกับ $ENEMY|Y$"
  JOIN_ALLIANCE_EFFECT:0 "$SECOND|Y$ เข้าร่วม $ALLIANCE|Y$"
  JOIN_ALLIANCE_EFFECT_2:0 "$SECOND|Y$ joins in a Federation together with $FIRST|Y$."
  LEAVE_ALLIANCE:0 "Leave alliance"
@@ -1213,6 +1217,7 @@
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
  SET_COUNCIL_POSITION_EFFECT:0 "กำหนดผู้นำให้กับสภาในตำแหน่ง $POSITION|Y$"
+ SET_COUNCIL_POSITION_TO_COUNCIL_EFFECT: "Assigns $POSITION|Y$ to the Council"
  ADD_ETHIC_EFFECT:0 "\nได้รับจริยธรรม $ETHIC|Y$\n"
  CLEAR_ETHOS_EFFECT:0 "จริยธรรมทั้งหมดจะถูกลบ"
  REMOVE_ETHIC_EFFECT:1 "จริยธรรม $ETHIC|Y$ หายไป\n"
@@ -1271,9 +1276,9 @@
  REMOVE_RELATION_FLAG_EFFECT:0 "Removes the $FLAGNAME$ relation flag for $COUNTRY$"
  ALL_PLANET_MOONS:0 "All Moons of planet"
  ALL_SYSTEMS_IN_CLUSTER:0 "All Systems in Cluster"
- CHANGE_GOVERNMENT_AUTHORITY_EFFECT:0 "Change Government Authority to $KEY|Y$"
+ CHANGE_GOVERNMENT_AUTHORITY_EFFECT:0 "เปลี่ยนระบอบการปกครองเป็น $KEY|Y$"
  CHANGE_GOVERNMENT_AUTHORITY_EFFECT_RANDOM:0 "Change to Random Government Authority"
- CHANGE_GOVERNMENT_CIVICS_EFFECT:0 "Change Government Civics to $CIVICS$"
+ CHANGE_GOVERNMENT_CIVICS_EFFECT:0 "เปลี่ยนคุณสมบัติพลเมืองเป็น $CIVICS$"
  CHANGE_GOVERNMENT_CIVICS_EFFECT_RANDOM:0 "Change to Random Government Civics"
  ASSIGN_LEADER_EFFECT:0 "$LEADER$ is assigned as leader"
  UNASSIGN_LEADER_EFFECT:0 "$LEADER$ ถูกปลดจากผู้นำแล้ว"
@@ -1492,6 +1497,8 @@
  HAS_SEEN_ANY_BYPASS_NOT:0 "$COUNTRY|Y$ has encountered a $BYPASS_TYPE|Y$."
  HAS_SEEN_ANY_BYPASS:0 "$COUNTRY|Y$ has NOT encountered a $BYPASS_TYPE|Y$."
  ADD_SEEN_BYPASS_INSTANCE:0 "$COUNTRY|Y$ records $BYPASS|Y$ location."
+ IS_BYPASS_TYPE: "Bypass is of type $BYPASS_TYPE|Y$."
+ IS_BYPASS_TYPE_NOT: "Bypass is NOT of type $BYPASS_TYPE|Y$."
  ADD_RESOURCE:1 "$RESOURCES|Y$"
  STARBASE_TRIGGER_SIZE_EQ:0 "เลเวลฐานอวกาศเท่ากับ $SIZE|Y$"
  STARBASE_TRIGGER_SIZE_GT:0 "เลเวลฐานอวกาศมากกว่า $SIZE|Y$"
@@ -1534,6 +1541,8 @@
  IS_NOT_DISTANCE_SAME_SYSTEM:0 "Distance within same system is NOT within range $MIN|Y2$ to $MAX|Y2$"
  IS_DISTANCE_TO_EMPIRE:0 "Distance to $WHO|Y$ is $COMPARATOR$ $DISTANCE|Y$"
  IS_NOT_DISTANCE_TO_EMPIRE:0 "Distance to $WHO|Y$ is NOT $COMPARATOR$ $DISTANCE|Y$"
+ IS_DISTANCE_TO_CAPITAL: "Total hyperlane distance to capital is $COMPARATOR$ $DISTANCE|Y$"
+ IS_NOT_DISTANCE_TO_CAPITAL: "Total hyperlane distance to capital is NOT $COMPARATOR$ $DISTANCE|Y$"
  HAS_COMMUNICATIONS_TRIGGER:0 "Has established communications with $COUNTRY|Y$"
  HAS_NOT_COMMUNICATIONS_TRIGGER:0 "Has NOT established communications with $COUNTRY|Y$"
  IS_NOT_BRIDGE_SYSTEM:0 "System is not a bridge"
@@ -1595,6 +1604,8 @@
  ADD_SITUATION_PROGRESS:0 "สถานการณ์ $SITUATION|Y$ ก้าวหน้าไป $AMOUNT|Y$"
  ADD_SITUATION_PROGRESS_NEGATIVE:0 "The $SITUATION|Y$ Situation recedes by $AMOUNT|Y$"
  SET_SITUATION_APPROACH_EFFECT:1 "Situation Approach is set to '$APPROACH|Y$'. This will have the following effects:\n$EFFECTS$"
+ CHANGE_SITUATION_TARGET_EFFECT_NONE: "Clears the target of $NAME|Y$."
+ CHANGE_SITUATION_TARGET_EFFECT: "Changes the target of $NAME|Y$ to $TARGET_NAME|Y$."
  TRIGGER_SITUATION_PROGRESS:0 "Total progress ($CURRENT$) is $COMPARE$ $PROGRESS|Y$"
  TRIGGER_SITUATION_PROGRESS_NOT:0 "Total progress ($CURRENT$) is NOt $COMPARE$ $PROGRESS|Y$"
  TRIGGER_SITUATION_MONTHLY_PROGRESS:0 "Monthly progress ($CURRENT$) is $COMPARE$ $PROGRESS|Y$"
@@ -1808,6 +1819,8 @@
  HAS_AGENDA_PROGRESS_PERCENT: "Council Agenda Progress is $COMPARE$ $VALUE|0%$"
  HAS_NOT_AGENDA_PROGRESS: "Council Agenda Progress is NOT $COMPARE$ $VALUE|0$"
  HAS_AGENDA_PROGRESS: "Council Agenda Progress is $COMPARE$ $VALUE|0$"
+ HAS_NOT_LEGITIMACY: "Council Legitimacy is NOT $COMPARE$ $VALUE|0%$"
+ HAS_LEGITIMACY: "Council Legitimacy is $COMPARE$ $VALUE|0%$"
  effect_random_fleet_in_orbit:0 "Random Fleet in Orbit"
  effect_every_fleet_in_orbit:0 "Every Fleet in Orbit"
  NUM_FALLEN_EMPIRES_LESS_THAN:0 "จำนวนจักรวรรดิฟอลเล็น ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
@@ -1861,6 +1874,7 @@
  COMPLETE_CRISIS_OBJECTIVE:3 "The $OBJ|Y$ crisis objective is completed, granting $REWARD|G$ Menace."
  DEACTIVATE_MENACE_PERK:0 "The Menace Perk $PERK$ was deactivated for $COUNTRY$"
  ACTIVATE_CRISIS_PROGRESSION:1 "ทำให้ $COUNTRY$ สามารถก้าวไปสู่ §Yการเป็น §Rไครซิส§!§!"
+ ACTIVATE_CRISIS_PROGRESSION_NO_COUNTRY: "Allows you to progress towards §YBecoming the §RCrisis§!§!."
  CREATE_NEBULA_EFFECT:0 "เนบิวลาถูกสร้างขึ้นในระบบดาว $SYSTEM|Y$"
  ADD_VICTORY_SCORE_EFFECT:0 "$VALUE$ is added to the Victory Score of $COUNTRY|Y$"
  HAS_CRISIS_LEVEL_TRIGGER:0 "Has Crisis Level: $LEVEL|Y$"
@@ -1955,7 +1969,41 @@
  EFFECT_REMOVE_ENVOYS_TO:0 "Remove envoys assigned by $FROM_COUNTRY$ to $TO_COUNTRY$"
  TRIGGER_IS_GARRISON: "Fleet $FLEET|Y$ is a garrison"
  TRIGGER_IS_NOT_GARRISON: "Fleet $FLEET|Y$ is not a garrison"
+ TRIGGER_CAN_GO_MIA: "$FLEET|Y$ can go Missing In Action"
+ TRIGGER_CANNOT_GO_MIA: "$FLEET|Y$ cannot go Missing In Action"
  HAS_NUM_POSITIVE_TRAITS: "Number of positive Traits is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_POSITIVE_TRAITS: "Number of positive Traits is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_NEGATIVE_TRAITS: "Number of negative Traits is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_NEGATIVE_TRAITS: "Number of negative Traits is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_SUBCLASS: "Number of negative subclass traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_SUBCLASS: "Number of positive subclass traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_SUBCLASS: "Number of subclass traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_COUNCILOR_SUBCLASS: "Number of negative Councilor subclass Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_COUNCILOR_SUBCLASS: "Number of positive Councilor subclass Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_COUNCILOR_SUBCLASS: "Number of subclass Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_NON_COUNCIL_SUBCLASS: "Number of negative non Councilor subclass Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_NON_COUNCIL_SUBCLASS: "Number of positive non Councilor subclass Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_SUBCLASS: "Number of negative subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_SUBCLASS: "Number of positive subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_SUBCLASS: "Number of subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_COUNCILOR_SUBCLASS: "Number of negative Councilor subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_COUNCILOR_SUBCLASS: "Number of positive Councilor subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_COUNCILOR_SUBCLASS: "Number of Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_NON_COUNCIL_SUBCLASS: "Number of negative non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_NON_COUNCIL_SUBCLASS: "Number of positive non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_NON_SUBCLASS: "Number of negative non subclass traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_NON_SUBCLASS: "Number of positive non subclass traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NON_SUBCLASS: "Number ofnon subclass  traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_COUNCILOR_NON_SUBCLASS: "Number of negative non subclass Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_COUNCILOR_NON_SUBCLASS: "Number of positive non subclass Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_COUNCILOR_NON_SUBCLASS: "Number of non subclass Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_NON_COUNCIL_NON_SUBCLASS: "Number of negative non subclass non Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_NON_COUNCIL_NON_SUBCLASS: "Number of positive non subclass non Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_NON_SUBCLASS: "Number of negative non subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_NON_SUBCLASS: "Number of positive non subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NON_SUBCLASS: "Number of non subclass trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_COUNCILOR_NON_SUBCLASS: "Number of negative non subclass Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_COUNCILOR_NON_SUBCLASS: "Number of positive non subclass Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_COUNCILOR_NON_SUBCLASS: "Number of non subclass Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_NON_COUNCIL_NON_SUBCLASS: "Number of negative non subclass non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_NON_COUNCIL_NON_SUBCLASS: "Number of positive non subclass non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
