--- a/mod/thmod/localisation/english/additional_content_l_english.yml
+++ b/mod/thmod/localisation/english/additional_content_l_english.yml
@@ -17,6 +17,27 @@
  ADDITIONAL_CONTENT_CONGRATULATIONS: "Congratulations!\nYou now own $NAME$!"
  ADDITIONAL_CONTENT_INSTALL_DESCRIPTION: "Restart the game to install your new content.\n$FLAVOR$"
  ADDITIONAL_CONTENT_ERROR_LOADING_STORE_DATA: "Could not load page data."
- ADDITIONAL_CONTENT_ERROR_CHECK_STEAM: "Could not open page, please make sure Steam is running."
+ ADDITIONAL_CONTENT_ERROR_CHECK_STEAM: "Could not open page, please make sure the internet is connected."
  ADDITIONAL_CONTENT_ERROR_FAILED_TO_FIND_DLC: "Error occurred opening page for the selected DLC."
  ADDITIONAL_CONTENT_ERROR_MODS_ARE_ACTIVE: "To ensure compatibility, the Additional Content page requires the latest version of Stellaris without mods enabled."
+ star_eater_dummy: "$star_eater$"
+ star_eater_dummy_DESC: ""
+ star_eater_dummy_MEGASTRUCTURE_DETAILS: ""
+ collossus_mammalian_dummy: "$MAM$"
+ collossus_mammalian_dummy_DESC: ""
+ collossus_mammalian_dummy_MEGASTRUCTURE_DETAILS: ""
+ collossus_reptile_dummy: "$REP$"
+ collossus_reptile_dummy_DESC: ""
+ collossus_reptile_dummy_MEGASTRUCTURE_DETAILS: ""
+ collossus_avian_dummy: "$AVI$"
+ collossus_avian_dummy_DESC: ""
+ collossus_avian_dummy_MEGASTRUCTURE_DETAILS: ""
+ collossus_arthropoid_dummy: "$ART$"
+ collossus_arthropoid_dummy_DESC: ""
+ collossus_arthropoid_dummy_MEGASTRUCTURE_DETAILS: ""
+ collossus_molluscoid_dummy: "$MOL$"
+ collossus_molluscoid_dummy_DESC: ""
+ collossus_molluscoid_dummy_MEGASTRUCTURE_DETAILS: ""
+ collossus_fungoid_dummy: "$FUN$"
+ collossus_fungoid_dummy_DESC: ""
+ collossus_fungoid_dummy_MEGASTRUCTURE_DETAILS: ""
