--- a/mod/thmod/localisation/english/aquatics_l_english.yml
+++ b/mod/thmod/localisation/english/aquatics_l_english.yml
@@ -6,7 +6,7 @@
  trait_aquatic_remove_evolutionary_mastery:1 "§Rต้องการวัฒนธรรม §Y$tr_genetics_resequencing$§! เพื่อลบ§!"
  trait_aquatic_remove_hydrocentric:0 "§RCannot remove §Y$trait_aquatic$§! trait after taking §Y$ap_hydrocentric$§! Ascension Perk.§!"
  leader_trait_aquatic_admiral:0 "อยู่ใต้น้ำ"
- leader_trait_aquatic_admiral_desc:0 "The ship adaptations needed to make this admiral feel at home have the fortuitous side-effect of making the fleet's hull stronger and more durable."
+ leader_trait_aquatic_admiral_desc:0 "The ship adaptations needed to make this commander feel at home have the fortuitous side-effect of making the fleet's hull stronger and more durable."
  origin_here_be_dragons:0 "ที่นี่มีมังกร"
  origin_here_be_dragons_desc:0 "Since time immemorial, this civilization has shared its star system with a formidable dragon. The mysterious creature's behavior sways between distant benevolence and haughty indifference. How this relationship will evolve as the planet dwellers take to the stars remains to be seen."
  civic_tooltip_aquatics_effects:1 "- $HOME_SYSTEM$ มี §Iมังกรฟ้า§! คอยปกป้อง ซึ่งจะโกรธเกรี้ยวหากมันไม่พอใจ"
