--- a/mod/thmod/localisation/english/clone_army_l_english.yml
+++ b/mod/thmod/localisation/english/clone_army_l_english.yml
@@ -9,11 +9,11 @@
  trait_clone_soldier_fertile_desc:0 "§LOnce infertile, engineered for compliance and war. Their genetic edge diminished, they are now stable enough for natural reproduction.§!"
  trait_clone_soldier_infertile_full_potential:0 "Clone Soldier Ascendant"
  trait_clone_soldier_infertile_full_potential_desc:0 "§LClones at their genetically-engineered peak, with further improved strength, efficiency, durability, and longevity - but forever infertile.§!"
- leader_trait_clone_army_admiral:0 "Clone Army Admiral"
+ leader_trait_clone_army_admiral:0 "Clone Army Commander"
  leader_trait_clone_army_admiral_desc:0 "From its extensive military education, this leader understands how to maximize the efficiency of ships and soldiers alike."
- leader_trait_clone_army_full_admiral:0 "Ascendant Clone Army Admiral"
+ leader_trait_clone_army_full_admiral:0 "Ascendant Clone Army Commander"
  leader_trait_clone_army_full_admiral_desc:0 "Subjected since its creation to a military education regimen so intense few could endure it, this leader wields excellent martial and leadership abilities."
- leader_trait_clone_army_fertile_admiral:0 "Descendant Clone Army Admiral"
+ leader_trait_clone_army_fertile_admiral:0 "Descendant Clone Army Commander"
  leader_trait_clone_army_fertile_admiral_desc:0 "From its specialized military education, this leader holds an above-average understanding of martial procedures and how best to optimize them."
  TRAIT_INFERTILE:0 "§Rไม่สามารถสืบพันธุ์ตามธรรมชาติได้§!"
  genelock_trait_tooltip:0 "§Rไม่สามารถดัดแปลงพันธุกรรมได้§!"
@@ -24,9 +24,9 @@
  building_clone_army_clone_vat_effect_desc:1 "ประกอบและรองรับได้ถึง §Y20§! ประชากร £pops£ §Y$clone_soldier$§! ประสิทธิผลของการประกอบนี้จะลดลงเมื่อ $building_clone_army_clone_vat$ เต็มความจุ"
  START_SCREEN_CLONE_ARMY:0 "We were made for war! Engineered soldiers who live and die by the Ancient Clone Vats left behind by our Creators, forever cast in their mold. Any memory of our masters is lost to past generations, and we do not know when or why they left us. It is likely that records were routinely erased, ever faithful to military protocol - but at some point in recent centuries, that changed. By chance, or perhaps some misfiring survival instinct, our subconscious drove us to seek answers, to seek new purpose and ways to break the form imposed on us.\n\nOur efforts since then have been ceaseless, at long last granting us access to the grand expanses of space. As our horizon widens, so too must our knowledge broaden - and so our chances of breaking free increase.\n\nWe shall not squander the possibilities given to us by our forebears. We shall fight to pass on these possibilities to future clones, and fight to eliminate the restrictions placed on us.\n"
  alert_declining_pops_title:0 "ประชากรลดลง"
- alert_declining_pops_instant:0 "£pops£ Pops are declining on the following planets:"
+ alert_declining_pops_instant:0 "£pops£ ประชากรกำลังลดลงบนดาวเคราะห์ต่อไปนี้:"
  CLONE_ARMY_FORCE_DECLINE:0 "§RInsufficient §YAncient Clone Vats§! to sustain §YClone Soldier§! population§!"
- OVERPOPULATION_DECLINE:0 "§RExcessive Overcrowding§!"
+ OVERPOPULATION_DECLINE:0 "§Rแออัดมากเกินไป§!"
  MESSAGE_CLONE_ARMY_NO_CLONE_VATS_TITLE:0 "Pops Declining"
  MESSAGE_CLONE_ARMY_NO_CLONE_VATS:0 "The £pops£ §YClone Soldier§! Pops on $PLANET|Y$ have nothing to sustain them. Without at least one §YAncient Clone Vat§!, they will soon perish."
  clones.4.name:0 "Clone Fertility"
