--- a/mod/thmod/localisation/english/first_contact_situations_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_situations_l_english.yml
@@ -69,26 +69,26 @@
  preftl.2025.desc:0 "On [Target.GetName], a number of so-called messiahs have appeared. With promises of 'divine deliverance', each of these prophets has amassed a substantial following. On top of the ravages of disease, violent clashes between competing sects are increasingly commonplace."
  preftl.2025.a:0 "The path of divine truth is winding."
  preftl.2026.name:0 "True Prophet"
- preftl.2026.desc:0 "At last, the plague on [Target.GetName] has run its course, and our work there has been rewarded: the survivors have rallied around a prophet of the true faith. In gratitude, the priesthood is willing to provide us with a working emissary, whose skills as a governor are said to be formidable."
+ preftl.2026.desc:0 "At last, the plague on [Target.GetName] has run its course, and our work there has been rewarded: the survivors have rallied around a prophet of the true faith. In gratitude, the priesthood is willing to provide us with a working emissary, whose skills as an official are said to be formidable."
  preftl.2026.a:0 "Praise the Divine."
  plague_03_spiritualist:0 "Justified Ends"
  plague_03_spiritualist_desc:0 "Another society has awakened to the true faith. Our message rings out across the galaxy."
  plague_03_militarist:0 "$plague_03_spiritualist$"
  plague_03_militarist_desc:0 "Another planet in this harsh galaxy is now capable of defending themselves."
- true_prophet_tt:0 "A skilled Governor agrees to join our empire."
+ true_prophet_tt:0 "A skilled Official agrees to join our empire."
  leader_trait_zealot:0 "Fervent Believer"
- leader_trait_true_prophet_desc:0 "Having gazed into the abyss, this governor possesses unshakeable faith."
- leader_trait_zealot_desc:0 "Having gazed into the abyss, this governor possesses unshakeable faith."
+ leader_trait_true_prophet_desc:0 "Having gazed into the abyss, this leader possesses unshakeable faith."
+ leader_trait_zealot_desc:0 "Having gazed into the abyss, this leader possesses unshakeable faith."
  preftl.2030.name:0 "Ragged Flags"
  preftl.2030.desc:0 "On [Target.GetName], the exhausted population, starving, sick, half-mad with grief and endless war, staggers towards an uncertain future."
  plague_05:0 "Ragged Flags"
  plague_05_desc:0 "When crisis becomes routine, the victims either fight or fall."
  preftl.2031.name:0 "Brilliant Banner"
- preftl.2031.desc:0 "The plague on [Target.GetName] has run its course, and the faction we backed has succeeded in uniting the population under a single banner. In gratitude for our efforts, the ruling junta has offered to provide us with a general, one whose skills on the battlefield have proven formidable."
+ preftl.2031.desc:0 "The plague on [Target.GetName] has run its course, and the faction we backed has succeeded in uniting the population under a single banner. In gratitude for our efforts, the ruling junta has offered to provide us with a commander, one whose skills on the battlefield have proven formidable."
  preftl.2031.a:0 "Might is righteous."
- brilliant_banner_tt:0 "A skilled General agrees to join our empire."
- leader_trait_plague_hardened:0 "Plague-Hardened General"
- leader_trait_plague_hardened_desc:0 "Having gazed into the abyss, this general possesses a keen and tempered mind."
+ brilliant_banner_tt:0 "A skilled Commander agrees to join our empire."
+ leader_trait_plague_hardened:0 "Plague-Hardened Commander"
+ leader_trait_plague_hardened_desc:0 "Having gazed into the abyss, this commander possesses a keen and tempered mind."
  preftl.2035.name:0 "Apocalypse Now"
  preftl.2035.desc:0 "Thanks to our fastidious promotion, the plague on [Target.GetName] has decimated the population. Those few who survive now face the collapse of their civilization. Pushing them over the brink should not require much effort.\n\nWe are poised to inherit an empty world."
  preftl.2040.name:0 "Enhanced Immunity"
@@ -241,7 +241,7 @@
  preftl.2180.b:0 "Have our agents legitimize the regime."
  preftl.2185.name:0 "Suppress and Destroy"
  preftl.2185.a.desc:0 "The instability caused by corrupt and ineffectual local leaders on [Target.GetName] has galvanized public support around the rebels' cause.\n\nIn the planet's major urban centers, [Target.Owner.GetRulerName] has ordered their troops to carry out a series of brutal, street-by-street incursions to weed out the resistance."
- preftl.2185.b.desc:0 "The increasingly corrupt and ineffectual local leaders on [Target.GetName] have diminished popular support for the war. On both sides, military commanders have been forced into anti-insurgency campaigns to quell civilian unrest."
+ preftl.2185.b.desc:0 "The increasingly corrupt and ineffectual local leaders on [Target.GetName] have diminished popular support for the war. On both sides, military generals have been forced into anti-insurgency campaigns to quell civilian unrest."
  preftl.2185.a:0 "Increase our logistical support."
  preftl.2190.name:0 "Power Plays"
  preftl.2190.a.desc:0 "Across [Target.GetName] rebel forces are in retreat, and [Target.Owner.GetRulerName] reigns supreme.\n\nHowever, even as a new world order is taking shape, fractures have begun to appear; high-ranking officials pit themselves against victorious generals, and profit-hungry courtiers stalk the halls of power.\n\n[Target.Owner.GetRulerName] is about to be tested on a whole new battlefield."
@@ -252,7 +252,7 @@
  preftl.2195.b.desc:0 "On [Target.GetName] chaos reigns.\n\nDisorganized bands roam the countryside, desperate for food. In the capital, [Target.Owner.GetRulerName] clings to power, but with a diminished authority that barely extends beyond the palace gates.\n\nUnless something radical changes, the pro-unification forces appear headed for defeat."
  preftl.2195.a:0 "Begin arming the pro-unification forces."
  preftl.2200.name:0 "Grip of the Autarch"
- preftl.2200.desc:0 "In a stunning display of strategy, [Target.Owner.GetRulerName] has crushed the planet's resistance. Sleeper agents in the rebel ranks precipitated a coordinated and planet-wide attack. Before the rebel commanders knew what was happening, their positions were overwhelmed.\n\n[Target.GetName] is now a unified world."
+ preftl.2200.desc:0 "In a stunning display of strategy, [Target.Owner.GetRulerName] has crushed the planet's resistance. Sleeper agents in the rebel ranks precipitated a coordinated and planet-wide attack. Before the rebel generals knew what was happening, their positions were overwhelmed.\n\n[Target.GetName] is now a unified world."
  preftl.2200.a:0 "May the fallen be remembered."
  preftl.2205.name:0 "Year Zero"
  preftl.2205.a.desc:0 "In a stunning turn of events, [Target.Owner.GetRulerName] has been deposed.\n\nAligning themselves with several opportunistic generals within the regime, rebel forces succeeded in launching a coordinated, planet-wide attack. Before the pro-unification commanders knew what was happening, their positions were overwhelmed.\n\nParaded in chains through the streets of the capital, [Target.Owner.GetRulerName] was quickly executed. The victorious rebels have granted the planet's regions the authority to dictate their own affairs. After years of war, a tenuous peace has descended."
