--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -102,6 +102,7 @@
  hire_mercenary_leader:0 "Hire a skilled [marauder_species.GetName] leader for the duration of that leader's life."
  hire_admiral_merc:0 "\nคุณจ้างพลเรือเอกผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
  hire_general_merc:0 "\nคุณจ้างพลเอกผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
+ hire_commander_merc: "\nYou permanently hire a skilled [marauder_species.GetName] commander."
  marauder.30.e:0 "ไม่มีอะไร"
  marauder.30.f:0 "ลาก่อน"
  marauder.31.1.desc:0 "Ha! คุณจะให้เราโจมตีหนึ่งในคู่แข่งของคุณเหรอ?\n\nเราไม่ชอบที่จะเข้าไปพัวพันกับข้อพิพาทเล็กๆน้อยๆของพวกคุณหรอกนะ แต่ถ้ามีแรงจูงใจที่เหมาะสม คิดว่าเราก็น่าจะจัดการได้นะ...\n\nบอกมา ใครคือคนที่คุณต้องการให้เราโจมตี?"
@@ -158,6 +159,7 @@
  marauder.40.3.desc:0 "Yes, our greatest warriors are willing to lead your soldiers into battle. With the support of your energy credits, we will be able to serve Her with even greater fervor.\n\nYou will find that a lifetime of serving She of the Void has made our officers both fearless and effective."
  marauder.40.1.a:0 "จ้างพลเรือเอก"
  marauder.40.2.a:0 "จ้างพลเอก"
+ marauder.40.3.a: "Hire Commander"
  marauder.40.a.response:0 "Very good. The oath has been sworn, and the warrior is yours to do with as you will."
  marauder.40.b.response:0 "Oooh! This [marauder_species.GetName] very cunning! You lucky, [Root.GetSpeciesNamePlural]!"
  marauder.40.c.response:0 "She of the Void has blessed the sealing of this contract. May our champion serve you well."
@@ -171,11 +173,11 @@
  leader_trait_ruler_great_khan:0 "$leader_trait_great_khan$"
  leader_trait_ruler_great_khan_desc:0 "$leader_trait_great_khan_desc$"
  marauder.50.name:0 "สัญญารับจ้างสิ้นสุดลง"
- marauder.50.desc:0 "สัญญาของเรากับทหารรับจ้าง §H[Root.GetName]§! สิ้นสุดลงแล้ว หัวหน้าของพวกเขา พลเรือเอก [Root.Leader.GetName] ได้เสนอที่จะขยายการบริการ ของยานรบในทันที ภายใต้คำสั่งเขาให้เราอีกห้าปี... โดยมีค่าใช้จ่ายเพิ่มเติม\n\nหากเราปฏิเสธ ทหารรับจ้างก็จะไปหางานทำที่อื่น"
+ marauder.50.desc:0 "Our contract with the mercenaries in the §H[Root.GetName]§! has come to an end. Their leader, Commander [Root.Leader.GetName], has offered to immediately extend the services of the ships under [Root.Leader.GetHerHis] command to us for another five years... at an extra charge.\n\nIf we refuse, the mercenaries will depart in search of employment elsewhere."
  marauder.50.a:0 "ต่อสัญญา"
  marauder.50.b:0 "ให้พวกเขาไป"
- marauder.71.name:0 "Mercenary Admiral Replaced"
- marauder.71.desc:0 "Following the untimely demise of the former commander of the §H[Root.GetName]§!, the [marauder_species.GetNamePlural] have dispatched Admiral §H[new_leader.GetName]§! as a replacement."
+ marauder.71.name:0 "Mercenary Commander Replaced"
+ marauder.71.desc:0 "Following the untimely demise of the former commander of the §H[Root.GetName]§!, the [marauder_species.GetNamePlural] have dispatched Commander §H[new_leader.GetName]§! as a replacement."
  marauder.76.name:0 "[marauder_species.GetName] Mercenaries Vanish"
  marauder.76.desc:0 "The loss of their home systems seem to have badly shaken the §H[marauder_species.GetName]§! mercenaries in the [Root.GetName]. In spite of the five-year contract we signed with them, the treacherous brigands and all of their ships have vanished into deep space!\n\nTheir last transmission, apparently a code-phrase to signal their departure, was:\n\n§R"Vengeance shall be ours."§!"
  marauder.76.a:0 "We had a contract!"
@@ -381,13 +383,13 @@
  marauder.702.b.desc:0 "After a prolonged period of skirmishing with the §H[marauder_neighbor.GetName]§! along our border, the drone crews of our vessels seem to have developed a certain degree of initiative to counter the often unpredictable tactics employed by the [marauder_neighbor_species.GetNamePlural]. This has led to a general increase in combat efficiency.\n\nThis will eventually have to be dealt with before the crews develop a dangerous level of individuality, but for now it will give us an advantage in any future engagements."
  marauder.702.c.desc:0 "The efficiency of our naval units has increased after a prolonged period of border skirmishing with the §H[marauder_neighbor.GetName]§!. Our units have been forced to make slight alterations to their programming to make up for the unorthodox and unpredictable tactics employed by the [marauder_neighbor_species.GetNamePlural].\n\nIt will eventually become necessary to purge this new data to prevent system degradation in other areas, but for now it will give us an advantage in future engagements."
  marauder.703.name:0 "[marauder_neighbor_species.GetName] Escape Pod"
- marauder.703.desc:0 "A [marauder_neighbor_species.GetName] escape pod drifted into our space recently, after a particularly violent clash between two warring clans of the §H[marauder_neighbor.GetName]§!. Border patrol units intercepted the pod and opened it, revealing a grateful [marauder_neighbor_species.GetName] flag officer. The admiral has pledged to serve us until death, at no cost."
- marauder.703.a:0 "Welcome aboard, Admiral."
- marauder.703.b:0 "We have no need of another admiral."
+ marauder.703.desc:0 "A [marauder_neighbor_species.GetName] escape pod drifted into our space recently, after a particularly violent clash between two warring clans of the §H[marauder_neighbor.GetName]§!. Border patrol units intercepted the pod and opened it, revealing a grateful [marauder_neighbor_species.GetName] flag officer. The Commander has pledged to serve us until death, at no cost."
+ marauder.703.a:0 "Welcome aboard, Commander."
+ marauder.703.b:0 "We have no need of another Commander."
  marauder.703.c:0 "Euthanize the fleshling."
  marauder.703.d:0 "Harvest the creature."
  marauder.703.e:0 "Until death it is. Dispose of the xeno."
- gain_marauder_admiral:0 "We gain a seasoned [marauder_neighbor_species.GetName] admiral."
+ gain_marauder_admiral:0 "We gain a seasoned [marauder_neighbor_species.GetName] Commander."
  gain_marauder_fleet:0 "We gain a small fleet of Marauder ships."
  marauder.704.name:0 "Drifting Fleet"
  marauder.704.desc:0 "A small fleet of derelict [marauder_neighbor_species.GetName] warships was recently discovered in the [border_system.GetName] system, not far from the territory of the §H[marauder_neighbor.GetName]§!. Computer logs on the ships indicate that their crews fled into our space to escape some kind of clan feud. Unfortunately for them, they brought few supplies and soon starved to death. The ships have been adrift ever since.\n\nOur engineers have gone over the ships and they appear to be in decent condition. If they are crewed, we could commission them into service with our own fleet."
