--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -4,7 +4,7 @@
  SPYNETWORK_ASSETS:0 "จารชน"
  OPERATIONS:0 "ปฏิบัติการ"
  build_spy_network_TITLE:0 "สร้างเครือข่ายสอดแนม"
- build_spy_network_DESC:2 "Send an envoy who will work on building a $spy_network$ within their civilization."
+ build_spy_network_DESC:2 "ส่งทูตที่จะสร้าง $spy_network$ในอารยธรรมของพวกเขา"
  spy_network:1 "เครือข่ายสอดแนม"
  spy_network_plural:0 "เครือข่ายสอดแนม"
  spy_network_desc:3 "การส่งทูตเพื่อสร้าง$spy_network$จะเพิ่ม §Hเลเวลการแทรกซึม§! ที่ให้ข่าวกรอง และทำให้เราปฏิบัติการจารกรรมได้\n\nเราไม่สามารถมอบหมายใหม่ได้ในระยะเวลา §Y£time£360§!"
@@ -427,7 +427,7 @@
  sleeper_cell_operation_success_desc:0 "We have planted sleeper cells that keep us up to date with the latest affairs and stand ready to do our bidding at a moment's notice."
  operation_sleeper_cells_dont_stack_this:1 "$TRIGGER_FAIL$ §RWe have already established sleeper cells within the [root.target.GetName]. They will last until §Y[Root.sleeper_cell_success]§!§!"
  envoy_events.200.name:0 "Lobbyists"
- envoy_events.200.desc:1 "A cacophony of voices may be heard in the Galactic Community - not all of them friendly, and certainly not all of them aligning with [Root.GetAdj] interests. Unfortunately, it seems that Ambassador [event_envoy.GetName] has been listening to the wrong voices. Eyebrows were raised when [event_envoy.GetSheHe] attended several conferences hosted by the §H[Root.GetOppositionGalcomLobbyists]§!. Now it has emerged that a large sum of credits traceable to that organization were transferred to [event_envoy.GetHerHim].\n\n[event_envoy.GetName]'s colleagues demand that [event_envoy.GetSheHe] be recalled, citing trust issues. However, some of our more devious advisors suggest that we could strike a deal to keep [event_envoy.GetHerHim] in place in return for a share of the pot."
+ envoy_events.200.desc:1 "A cacophony of voices may be heard in the Galactic Community - not all of them friendly, and certainly not all of them aligning with [Root.GetAdj] interests. Unfortunately, it seems that emissary [event_envoy.GetName] has been listening to the wrong voices. Eyebrows were raised when [event_envoy.GetSheHe] attended several conferences hosted by the §H[Root.GetOppositionGalcomLobbyists]§!. Now it has emerged that a large sum of credits traceable to that organization were transferred to [event_envoy.GetHerHim].\n\n[event_envoy.GetName]'s colleagues demand that [event_envoy.GetSheHe] be recalled, citing trust issues. However, some of our more devious advisors suggest that we could strike a deal to keep [event_envoy.GetHerHim] in place in return for a share of the pot."
  envoy_events.200.A:0 "What could be the harm in it?"
  beholden_to_special_interests:0 "Beholden to Special Interests"
  beholden_to_special_interests_desc:0 "Our envoys are as likely to enrich themselves with funds from lobbyist groups as they are to actually do our bidding."
@@ -496,7 +496,7 @@
  envoy_events.210.A:0 "[event_envoy.GetSheHeCap] shall remain in [event_envoy.GetHerHis] position."
  faction_upset:0 "Angered"
  envoy_events.215.name:0 "Substance Abuse"
- envoy_events.215.desc:0 "Our ambassador corps has for some time been concerned at the performance of [event_envoy.GetName], one of our envoys to the [event_envoy.GetEnvoyLocation]. Now, evidence has come to light that [event_envoy.GetSheHe] appear[event_envoy.GetSXX] to have fallen prey to an alien substance from the [provider_country.GetName] that has proven extremely addictive to [Root.GetSpeciesNamePlural].\n\nAlthough the trade in this substance is highly illegal among the [provider_country.GetSpeciesNamePlural], a lucrative black market run by cutthroat drug lords has sprung up. These drug lords, who apparently managed to introduce it to [event_envoy.GetHerHim] as a potent aphrodisiac, now exert a considerable degree of influence over [event_envoy.GetName], who is forced to do their bidding in return for satisfying [event_envoy.GetHerHis] cravings."
+ envoy_events.215.desc:0 "Our ambassador corps has for some time been concerned at the performance of [event_envoy.GetName], one of our officials to the [event_envoy.GetEnvoyLocation]. Now, evidence has come to light that [event_envoy.GetSheHe] appear[event_envoy.GetSXX] to have fallen prey to an alien substance from the [provider_country.GetName] that has proven extremely addictive to [Root.GetSpeciesNamePlural].\n\nAlthough the trade in this substance is highly illegal among the [provider_country.GetSpeciesNamePlural], a lucrative black market run by cutthroat drug lords has sprung up. These drug lords, who apparently managed to introduce it to [event_envoy.GetHerHim] as a potent aphrodisiac, now exert a considerable degree of influence over [event_envoy.GetName], who is forced to do their bidding in return for satisfying [event_envoy.GetHerHis] cravings."
  envoy_events.215.A:0 "Fire [event_envoy.GetHerHim]."
  envoy_events.215.A.tooltip:0 "§Y[event_envoy.GetName]§! is replaced with immediate effect. However, it will prove impossible to cover up this stain on our diplomatic corps."
  envoy_events.220.name:0 "Offense Taken"
