--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -109,6 +109,7 @@
  specialist_conversion_base_time:0 "Base: $DAYS|Y0$ days"
  specialist_conversion_time_from_sprawl:0 "From $SPRAWL|Y$ £empire_sprawl£ $EMPIRE_SIZE$: +$TIME_PERCENT$ conversion time"
  specialist_conversion_speed_from_ethic:0 "From being $ETHIC|Y$: $TIME_PERCENT$ conversion time"
+ specialist_conversion_time_from_overlord: "From Overlord $OVERLORD|Y$: $TIME_PERCENT$ conversion time"
  specialist_conversion_monthly_cost:1 "Monthly Cost for Overlord: $COST$"
  specialist_bulwark_overlord_modifier:0 "Bulwark Advisory"
  specialist_bulwark_overlord_modifier_desc:0 "§LAdvisors from our Bulwark specialists contribute to the efficient construction of our own defense.§!"
@@ -287,7 +288,7 @@
  preset_subsidiary_benevolent_desc:0 "$preset_subsidiary_desc$"
  preset_subsidiary_benevolent_flavor_desc:0 "$preset_subsidiary_flavor_desc$"
  preset_dominion:0 "อาณานิคม"
- preset_satellite:0 "ดาวบริวาร"
+ preset_satellite:0 "บริวาร"
  preset_signatory:0 "สนธิสัญญา"
  preset_thrall:0 "ทาส"
  preset_satrapy:0 "เซทระพี/เขตปกครอง"
@@ -859,8 +860,17 @@
  r_dark_matter:1 "£sr_dark_matter£ §Y$sr_dark_matter$§!"
  r_zro:1 "£sr_zro£ §Y$sr_zro$§!"
  r_nanites:1 "£nanites£ §Y$nanites$§!"
+ r_basic: "£energy£ £minerals£ £food£ §Yทรัพยากรพื้นฐาน§!"
+ r_basic_plural: "£energy£ £minerals£ £food£ §Yทรัพยากรพื้นฐาน§!"
+ r_advanced: "£alloys£ £consumer_goods£ §Yทรัพยากรขั้นสูง§!"
+ r_advanced_plural: "£alloys£ £consumer_goods£ §Yทรัพยากรขั้นสูง§!"
  r_strategic:0 "§Yทรัพยากรเชิงยุทธศาสตร์§! £rare_crystals£ £exotic_gases£ £volatile_motes£"
  r_strategic_plural:0 "§Yทรัพยากรเชิงยุทธศาสตร์§! £rare_crystals£ £exotic_gases£ £volatile_motes£"
+ r_minor_artifacts: "£minor_artifacts£ §Yศิลปวัตถุชั้นรอง§!"
+ r_astral_threads: "£astral_threads£ §Y$astral_threads$§!"
+ w_basic_plural: "£energy£ £minerals£ £food£ ทรัพยากรพื้นฐาน"
+ w_advanced_plural: "£alloys£ £consumer_goods£ ทรัพยากรขั้นสูง"
+ w_strategic_plural:0 "£rare_crystals£ £exotic_gases£ £volatile_motes£ ทรัพยากรเชิงยุทธศาสตร์"
  resource_subsidies_basic:1 "พื้นฐาน"
  resource_subsidies_advanced:1 "ขั้นสูง"
  resource_subsidies_research:1 "วิจัย"
@@ -868,7 +878,7 @@
  type_crime:0 "£crime£ §Y$PLANET_CRIME_TITLE$§!"
  type_deviancy:0 "£crime£ §Yความเบี่ยงเบน§!"
  pop_mechanical:0 "Mechanical"
- pop_organic:0 "Organic"
+ pop_organic:0 "สิ่งมีชีวิต"
  PRODUCES_RESOURCES_FOR_OVERLORD:0 "Produces for Overlord: "
  REQUIRES_RESOURCES_FOR_OVERLORD:0 "Upkeep for Overlord: "
  POP_PRODUCES_FOR_OVERLORD_TIP:0 "Production for Overlord: $VALUE|Y$"
@@ -1080,10 +1090,10 @@
  bulwark_2_penalties:0 "Bulwark Penalties II"
  bulwark_2_bulwark_insight:0 "Bulwark Insight II"
  bulwark_2_bulwark_insight_desc:1 "§EAdd to Researchable Technologies:§!\n$t$£engineering£ $tech_modular_engineering$\n$t$£engineering£ $tech_starbase_4$"
- bulwark_2_leaders:0 "Bulwark Admirals"
- bulwark_2_leaders_desc:1 "§EAdmirals in pool:§!\n$t$Leader Level: §G+1§!\n§ETransfer Leader:§!\n$t$Admirals with a Bulwark trait can be traded with the Overlord."
+ bulwark_2_leaders:0 "Bulwark Commanders"
+ bulwark_2_leaders_desc:2 "§ETransfer Leader:§!\n$t$$commander_plural_with_icon$ with a Bulwark trait can be traded with the Overlord."
  bulwark_2_traits:0 "Bulwark Traits"
- bulwark_2_traits_desc:0 "§EAdmirals gain one random trait:§!\n$leader_trait_bulwark_watcher_tooltip$\n$leader_trait_bulwark_retaliator_tooltip$\n$leader_trait_bulwark_sentinel_tooltip$"
+ bulwark_2_traits_desc:1 "§E$commander_plural_with_icon$ gain one random trait:§!\n$leader_trait_bulwark_watcher_tooltip$\n$leader_trait_bulwark_retaliator_tooltip$\n$leader_trait_bulwark_sentinel_tooltip$"
  bulwark_3_modifier:0 "Bulwark Bonuses III"
  bulwark_3_penalties:0 "Bulwark Penalties III"
  bulwark_3_bulwark_insight:0 "Bulwark Insight III"
@@ -1107,9 +1117,9 @@
  scholarium_2_modifier_desc:1 "Monthly Scientific Research: §G+30%§!\n$MOD_COUNTRY_NUM_TECH_ALTERNATIVES_ADD$: §G+1§!"
  scholarium_2_penalties:0 "Scholarium Penalties II"
  scholarium_2_leaders:0 "Scholarium Scientists"
- scholarium_2_leaders_desc:1 "§EScientists in pool:§!\n$t$Leader Level: §G+1§!\n§ETransfer Leader:§!\n$t$Scientists with a Scholarium trait can be traded with the Overlord."
+ scholarium_2_leaders_desc:2 "§ETransfer Leader:§!\n$t$$scientist_plural_with_icon$ with a Scholarium trait can be traded with the Overlord."
  scholarium_2_traits:0 "Scholarium Traits"
- scholarium_2_traits_desc:0 "§EScientists gain one random trait:§!\n$leader_trait_scholarium_investigator_tooltip$\n$leader_trait_scholarium_explorer_tooltip$\n$leader_trait_scholarium_observer_tooltip$"
+ scholarium_2_traits_desc:1 "§E$scientist_plural_with_icon$ gain one random trait:§!\n$leader_trait_scholarium_investigator_tooltip$\n$leader_trait_scholarium_explorer_tooltip$\n$leader_trait_scholarium_observer_tooltip$"
  scholarium_2_discovery:0 "Scholarium Discovery II"
  scholarium_2_discovery_desc:1 "§EPlanetary Sensors Reward:§!\n$t$Research Points in Caches: §G+1000§!"
  scholarium_3_modifier:0 "Scholarium Bonuses III"
@@ -1132,10 +1142,10 @@
  prospectorium_2_modifier_desc:2 "$mod_station_gatherers_cost_mult$: §G-25%§!\n$mod_country_energy_produces_mult$: §G+20%§!\n$mod_country_minerals_produces_mult$: §G+20%§!\n$mod_country_alloys_produces_mult$: §G+20%§!\nMonthly Strategic Resources: §G+20%§!"
  prospectorium_2_penalties:0 "Prospectorium Penalties II"
  prospectorium_2_penalties_desc:1 "Monthly Scientific Research: §R-40%§!"
- prospectorium_2_leaders:0 "Prospectorium Governors"
- prospectorium_2_leaders_desc:1 "§EGovernors in pool:§!\n$t$Leader Level: §G+1§!\n§ETransfer Leader:§!\n$t$Governors with a Prospectorium trait can be traded with the Overlord."
+ prospectorium_2_leaders:0 "Prospectorium Officials"
+ prospectorium_2_leaders_desc:1 "§ETransfer Leader:§!\n$t$$official_plural_with_icon$ with a Prospectorium trait can be traded with the Overlord."
  prospectorium_2_traits:0 "Prospectorium Traits"
- prospectorium_2_traits_desc:0 "§EGovernors gain one random trait:§!\n$leader_trait_prospectorium_extractor_tooltip$\n$leader_trait_prospectorium_optimizer_tooltip$\n$leader_trait_prospectorium_refiner_tooltip$"
+ prospectorium_2_traits_desc:0 "§E$official_plural_with_icon$ gain one random trait:§!\n$leader_trait_prospectorium_extractor_tooltip$\n$leader_trait_prospectorium_optimizer_tooltip$\n$leader_trait_prospectorium_refiner_tooltip$"
  prospectorium_2_mining_tech:0 "Prospectorium Mining Tech I"
  prospectorium_2_mining_tech_desc:0 "§EAdd to Researchable Technologies:§!\n$t$£engineering£ $tech_mine_rare_crystals$\n$t$£physics£ $tech_mine_volatile_motes$\n$t$£engineering£ $tech_mine_exotic_gases$"
  prospectorium_2_deposits:0 "Prospectorium Deposits II"
