--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -242,7 +242,7 @@
  paragon.40211.desc:0 "The salvage operation of the lost convoy has concluded. All of the resources located at the crash site have been recovered."
  paragon.40211.a:0 "Excellent."
  paragon.40220.name:0 "A Blorg Comes Calling"
- paragon.40220.desc:1 "§Y[Root.GetName]'s§! ex-partner, the Blorg governor §Y$NONA_BLORG_EX_HUSBAND_NAME$§!, wishes to join our empire. The governor has fallen on hard times and is looking for a fresh start. [Root.GetFirstName] claims $NONA_BLORG_EX_HUSBAND_NAME$ has vast experience in the management of mining worlds, and that the affable governor has brought a cache of precious minerals as a token of goodwill."
+ paragon.40220.desc:1 "§Y[Root.GetName]'s§! ex-partner, the Blorg official §Y$NONA_BLORG_EX_HUSBAND_NAME$§!, wishes to join our empire. The official has fallen on hard times and is looking for a fresh start. [Root.GetFirstName] claims $NONA_BLORG_EX_HUSBAND_NAME$ has vast experience in the management of mining worlds, and that the affable official has brought a cache of precious minerals as a token of goodwill."
  paragon.40220.a:0 "We can probably find some use for him."
  paragon.40220.a.custom_tooltip:0 "Blorg §Y$NONA_BLORG_EX_HUSBAND_NAME$§! เข้าร่วมจักรวรรดิเราในฐานะ §Hผู้นำ§!"
  paragon.40220.b:0 "No thanks. Go away."
@@ -306,11 +306,11 @@
  paragon.40710.name:0 "A Skilled Apprentice"
  paragon.40710.desc:1 "§Y[Root.GetName]§!, the Numinous Equilibrium's envoy, has taken on an apprentice. The promising young warrior wishes to swear an oath of allegiance to us."
  paragon.40710.a:0 "They are welcome to join us."
- paragon.40710.a.custom_tooltip:0 "นายพลฝึกหัดของ §Y$NAME_egalitarian1$§! เข้าร่วมจักรวรรดิเราในฐานะ §Hผู้นำ§!"
+ paragon.40710.a.custom_tooltip:0 "§Y$NAME_egalitarian1$'s§! apprentice Commander joins our empire as a §HLeader§!."
  paragon.40710.b:1 "We need officers, not generals."
  JYNN_APPRENTICE_DESC:0 "Trained since childhood by the warrior [event_target:renowned_egalitarian1.GetName] to help those who are helpless."
  jynn_recruited_army_officers:0 "Army Officer Recruitment"
- jynn_recruited_army_officers_desc:1 "Reliable and loyal subordinates are vital for any general."
+ jynn_recruited_army_officers_desc:1 "Reliable and loyal subordinates are vital for any commander."
  paragon.40720.name:0 "Numinous Support"
  paragon.40720.desc:1 "§Y[Root.GetName]§! has requested support from [Root.GetHisHer] order, the Numinous Equilibrium, to aid our empire in the ongoing struggle against tyranny and oppressors. Freighter ships carrying valuable alloys to sustain us have arrived from their secret headquarters."
  paragon.40720.a:0 "This could be useful."
@@ -371,12 +371,12 @@
  paragon.41320.a:0 "Knowledge is power."
  paragon.41320.a.intel.custom_tooltip:0 "Intel on Other Empires: §G+$@paragon_41320_a_intel_amt$§!"
  paragon.41410.name:0 "Vanity Palace"
- paragon.41410.desc:1 "§Y[Root.GetName]§!, the decadent governor, has built an extravagant palace for [Root.GetHimselfHerself] on [planet_governed.GetName]. This palace is as much a symbol of [Root.GetHisHer] power and wealth as of [Root.GetHisHer] vanity and corruption. To celebrate its completion, [Root.GetHeShe] will hold a grand feast, to which everyone of importance has been invited. And in a rare show of generosity [Root.GetHeShe] has also shared some of [Root.GetHisHer] riches with the population."
+ paragon.41410.desc:1 "§Y[Root.GetName]§!, the decadent official, has built an extravagant palace for [Root.GetHimselfHerself] on [planet_governed.GetName]. This palace is as much a symbol of [Root.GetHisHer] power and wealth as of [Root.GetHisHer] vanity and corruption. To celebrate its completion, [Root.GetHeShe] will hold a grand feast, to which everyone of importance has been invited. And in a rare show of generosity [Root.GetHeShe] has also shared some of [Root.GetHisHer] riches with the population."
  paragon.41410.a:0 "What else could be expected?"
  qla_minder_vanity_palace:0 "Vanity Palace"
  qla_minder_vanity_palace_desc:0 "This monumental building is as grotesque as it is fascinating."
  paragon.41420.name:0 "The Embezzler"
- paragon.41420.desc:1 "§Y[Root.GetName]§!, the decadent governor, has been caught embezzling. This has been going on for quite some time, and [Root.GetHeShe] has stashed [Root.GetHisHer] wealth not just in bank accounts but also in underground vaults and deep space depots all around the galaxy. In face of the charges, [Root.GetHeShe] threw [Root.GetHimselfHerself] to the ground, swearing that these items were intended as gifts for the ruler."
+ paragon.41420.desc:1 "§Y[Root.GetName]§!, the decadent official, has been caught embezzling. This has been going on for quite some time, and [Root.GetHeShe] has stashed [Root.GetHisHer] wealth not just in bank accounts but also in underground vaults and deep space depots all around the galaxy. In face of the charges, [Root.GetHeShe] threw [Root.GetHimselfHerself] to the ground, swearing that these items were intended as gifts for the ruler."
  paragon.41420.a:0 "That worm!"
  paragon.41510.name:0 "The Great Prophecy"
  paragon.41510.desc:1 "For many years, §Y[Root.GetName]§! the Mystic has interpreted signs and portents that reveal a greater destiny. Now, [Root.GetSheHe] claims a vision of the galaxy united under a single banner - our own. The real splendor is still to come."
@@ -425,11 +425,13 @@
  PARAGON_GATEWAY_DUDE_REPAIR_PROJECT:1 "Fix the Alien Vessel"
  PARAGON_GATEWAY_DUDE_REPAIR_PROJECT_DESC:2 "The alien vessel requires extensive maintenance. We have agreed to assist with repairs."
  paragon.3004.name:0 "Forgotten Admiral"
- paragon.3004.desc:1 "Our engineering team has ably assisted the alien crew. The vessel's designation translates roughly to 'First Talon', and their commander has identified himself as Skrand Sharpbeak, an admiral of renown.\n\nBy comparing data from the First Talon's databanks and our own, we have confirmed that Skrand and his crew were trapped within the gate for several millennia. For them, it was a short trip - but for the rest of the galaxy, thousands of years passed by. They have no home to return to. Everything and everyone they have have ever loved is long since gone."
+ paragon.3004.intro: "Our engineering team has ably assisted the alien crew. The vessel's designation translates roughly to 'First Talon', and their commander has identified himself as Skrand Sharpbeak, an admiral of renown.\n\nBy comparing data from the First Talon's databanks and our own, we have confirmed that Skrand and his crew were trapped within the gate for several millennia. For them, it was a short trip - but for the rest of the galaxy, thousands of years passed by."
+ paragon.3004.a.desc: "$paragon.3004.intro$\n\nThanks to our excavation on Skravird, at least we can point Admiral Sharpbeak towards his home planet, but everything and everyone he has have ever loved is long since gone."
+ paragon.3004.b.desc: "$paragon.3004.intro$\n\nThey have no home to return to. Everything and everyone they have have ever loved is long since gone."
  paragon.3004.a:0 "A sad fate."
  paragon.3005.name:0 "Skrand Sharpbeak"
  paragon.3005.desc:1 "§HAdmiral Skrand Sharpbeak of the First Talon hails us. He appears exhausted.§!\n\nSkravird has fallen. My home is no more. Billions of lives... gone.\n\nThe First Talon has become The Last Talon, and I am a soldier without a cause. For your help, and on behalf of my crew, I pledge our allegiance."
- paragon.3005.a:0 "Our thanks. But we have worthy admirals of our own."
+ paragon.3005.a:0 "Our thanks. But we have worthy commanders of our own."
  paragon.3005.a.response:0 "§HSkrand blinks and coughs.§!\n\nNo doubt. But know that my service is not offered lightly. As a token of goodwill, I will instruct my engineers to keep the Talon operable and teach your engineers how to maintain it."
  paragon.3005.b:1 "What is to prevent us from simply taking it ourselves?"
  paragon.3005.b.response:1 "§HSharpbeak recoils, his beak issuing a series of highly unpleasant squawks.§!\n\nThis ship is the pride of my lost homeland, built with the talons of workers who gave their lives to the project! It's the last piece of our home - all that's left to remind us of our fledgling nests.\n\n§HRegaining his posture, Skrand calms his clacking.§!\n\nSuffice to say, I would fight beak and claw to stop you."
@@ -482,7 +484,7 @@
  paragon.3021.a:0 "We can use these."
  paragon.3030.c:0 "Make them work it out."
  paragon.3031.name:0 "Integrated Structures"
- paragon.3031.desc:1 "Our officers and admirals are working closely with Skrand, but they are not always in accord with him. Their preferred command structures differ, causing unnecessary tension. This has precipitated a need for joint military training.\n\nThe work may limit our ability to command our fleets, but failing to properly prepare the troops could have dire consequences."
+ paragon.3031.desc:1 "Our officers and commanders are working closely with Skrand, but they are not always in accord with him. Their preferred command structures differ, causing unnecessary tension. This has precipitated a need for joint military training.\n\nThe work may limit our ability to command our fleets, but failing to properly prepare the troops could have dire consequences."
  paragon.3031.a:0 "Prepare an admiralty training program."
  paragon.3031.b:0 "Such war games are immaterial."
  paragon.3032.name:0 "Training Completed"
@@ -554,6 +556,7 @@
  paragon.3083.a.response:1 "Do not be. These clones will provide us with a way to live as we did in the past. In time, it may even be possible to have nestlings. You have given us hope. We thank you for that. May your plumage shine."
  NAME_Skrand_Species:0 "Talon"
  NAME_Skrand_Species_P:0 "Talons"
+ NAME_Skrand_Planet: "Skravird"
  paragon.3090.name:0 "History Studies"
  paragon.3090.desc:1 "We received a request from several members of the Talon's crew. They have asked us to use our resources to research their people's past. Much occurred while the Talon lay in limbo. They have asked that it be recorded for posterity."
  paragon.3090.a:0 "To the archives!"
@@ -563,7 +566,7 @@
  paragon.3092.name:0 "Broken Nest"
  paragon.3092.desc:0 "Here follows another report on the history of Skrand and his people:\n\nThe Migration was long over. Secure along the galaxy's outer rim, Skrand's kin enjoyed both peace and prosperity. But having traded vigilance for comfort, they were unprepared for the coming Menace.\n\nThe attackers came without warning. No wings were unfurled; neither talon nor beak flashed in combat. From space the faceless invaders bombed the avian worlds. In their wake they left only death."
  paragon.3093.name:0 "First Talon"
- paragon.3093.desc:0 "We've received another report on the history of Skrand and his people:\n\nSkravird's government collapsed. Its economy lay in ruins. But the valor of its people was undiminished. Far from the front lines, a project was hatched.\n\nA ship would be built unlike any that had come before. Its sheer scale would strike terror into enemy. When the First Talon was ready, it was placed under the command of the last of Skravird's admirals. Young and untested, Skrand Sharpbeak went to war. Soon his people would hail him as Menace Bane, First Claw of Skravird."
+ paragon.3093.desc:0 "We've received another report on the history of Skrand and his people:\n\nSkravird's government collapsed. Its economy lay in ruins. But the valor of its people was undiminished. Far from the front lines, a project was hatched.\n\nA ship would be built unlike any that had come before. Its sheer scale would strike terror into enemy. When the First Talon was ready, it was placed under the command of the last of Skravird's commanders. Young and untested, Skrand Sharpbeak went to war. Soon his people would hail him as Menace Bane, First Claw of Skravird."
  paragon.3094.name:0 "Final Flight"
  paragon.3094.desc:0 "Thus reads the final report on the history of Skrand and his people:\n\nThe First Talon, first and last of its line, cut through the enemy ranks. Battle after battle was won by the cunning and valor of its crew and their commander. Alas, its flight was short lived: no ship, not even one such as the Talon, could turn the tide of war on its own. In desperation, Skrand and his officers planned to sacrifice themselves in the last defense of Skravird. In a daring bid to outflank the enemy, Skrand ordered the Talon into an untested Gateway. Neither he nor the Talon were ever heard from again."
  paragon_is_not_keides:1 "§RThis site must be excavated by §YKeides§! himself.§!"
@@ -731,7 +734,7 @@
  paragon_origin_genetic_ascension:0 "\n\n§PRestored Genes:§!\nAfter several attempts at splicing the DNA of the $leader_trait_legendary_leader$ into other talented individuals, a single patient managed to survive the operation and develop beneficial traits. However, new genetic material needs to be injected regularly to maintain genomic stability.\nDecennial Upkeep: §R[owner.paragon_origin_ascension]§! £pop£ $POPS$"
  paragon_origin_null_loc:0 " "
  leader_trait_legendary_origin_desc:1 "\n§GLuminary Ruler Trait§!"
- leader_trait_legendary_military_knowledge:0 "Inspired General"
+ leader_trait_legendary_military_knowledge:0 "Inspired Commander"
  leader_trait_legendary_military_knowledge_desc:0 "A brilliant military commander, loved by the troops."
  leader_trait_legendary_foe_hammer:1 "Unwavering Aggressor"
  leader_trait_legendary_foe_hammer_desc:1 "An expert in starship weapons systems, this leader brings invaluable knowledge to fleet warfare."
@@ -1231,7 +1234,7 @@
  paragon.6000.desc:0 "With §Y[Ruler.GetTitle] [Ruler.GetRegnalName]'s§! health quickly failing, our best medical minds have devised an unorthodox solution. An elaborate apparatus will be built directly inside of the council chambers. By granting this machine control over many of [Ruler.GetHerHis] natural processes, we can keep [Ruler.GetHimHer] alive indefinitely."
  paragon.6000.desc.ap_mind_over_matter:0 "$paragon.6000.desc$\n\nOur psychics have also devised a plan. Perhaps responding to the collective sorrow of our people, a Shroud Entity has offered to rejuvenate our fallen leader. For a 'meager price', §Y[Ruler.GetTitle] [Ruler.GetRegnalName]§! can be kept alive indefinitely."
  paragon.6000.desc.ap_the_flesh_is_weak:0 "$paragon.6000.desc$\n\nOur cyberneticists have devised a brilliant plan... Using only the most cutting-edge enhancements, we can replace each faulty biological piece of the ruler's body. Once complete, §Y[Ruler.GetTitle] [Ruler.GetRegnalName]§! will rule for eternity."
- paragon.6000.desc.ap_synthetic_evolution:0 "Our roboticists have a suggestion to repair §Y[Ruler.GetTitle] [Ruler.GetRegnalName]§!: while expensives we can move thier mind into an new self-correcting positionric network. Being able to network with the entire population with allow us to improve on their already considerable skills."
+ paragon.6000.desc.ap_synthetic_evolution:0 "Our roboticists have a suggestion to repair §Y[Ruler.GetTitle] [Ruler.GetRegnalName]§!: while expensive, we can move their mind into a new self-correcting positronic network. Being able to network with the entire population allows us to improve their already considerable skills."
  paragon.6000.desc.ap_engineered_evolution:0 "paragon.6000.desc.ap_engineered_evolution: "$paragon.6000.desc$\n\nAlternatively, our geneticists have devised an alternative. Unlimited (though expensive) clone bodies could be made to house §Y[Ruler.GetTitle] [Ruler.GetRegnalName]§!, effectively making [Ruler.GetHimHer] immortal."
  paragon.6000.a:0 "Build this apparatus."
  paragon.6000.a.tooltip:0 "An apparatus will be built for §Y[Ruler.GetTitle] [Ruler.GetRegnalName]§!, granting [Ruler.GetHimHer] immortality at the price of locking [Ruler.GetHimHer] inside the palace."
@@ -1279,15 +1282,18 @@
  leader_trait_the_synth_luminary_desc:0 "This leader's synthetic body is the epitome of the roboticist's art. Quantum processing grants a direct connection with the meta-continuousness of the people. While boosting efficiency, the effects do not bode well for those altered."
  leader_trait_the_genetic_luminary:0 "Genetic Perfection"
  leader_trait_the_genetic_luminary_desc:0 "An endless series of clones has granted this leader immortality. Should the current sleeve become damaged or obsolete, a dozen more are ready to take its place. This has led to an obsession with genetic perfection."
+ mod_leader_commanders_sr_zro_upkeep_add: "£sr_zro£ $sr_zro$ $UPKEEP$"
  mod_leader_admirals_sr_zro_upkeep_add:0 "£sr_zro£ $sr_zro$ $UPKEEP$"
  mod_leader_generals_sr_zro_upkeep_add:0 "£sr_zro£ $sr_zro$ $UPKEEP$"
  mod_leader_scientists_sr_zro_upkeep_add:0 "£sr_zro£ $sr_zro$ $UPKEEP$"
- mod_leader_governors_sr_zro_upkeep_add:0 "£sr_zro£ $sr_zro$ $UPKEEP$"
+ mod_leader_officials_sr_zro_upkeep_add:0 "£sr_zro£ $sr_zro$ $UPKEEP$"
+ mod_leader_commanders_alloys_upkeep_add: "$r_alloys$ $UPKEEP$"
  mod_leader_admirals_alloys_upkeep_add:0 "$r_alloys$ $UPKEEP$"
  mod_leader_generals_alloys_upkeep_add:0 "$r_alloys$ $UPKEEP$"
  mod_leader_scientists_alloys_upkeep_add:0 "$r_alloys$ $UPKEEP$"
- mod_leader_governors_alloys_upkeep_add:0 "$r_alloys$ $UPKEEP$"
+ mod_leader_officials_alloys_upkeep_add:0 "$r_alloys$ $UPKEEP$"
+ mod_leader_commanders_food_upkeep_add: "$r_food$ $UPKEEP$"
  mod_leader_admirals_food_upkeep_add:0 "$r_food$ $UPKEEP$"
  mod_leader_generals_food_upkeep_add:0 "$r_food$ $UPKEEP$"
  mod_leader_scientists_food_upkeep_add:0 "$r_food$ $UPKEEP$"
- mod_leader_governors_food_upkeep_add:0 "$r_food$ $UPKEEP$"
+ mod_leader_officials_food_upkeep_add:0 "$r_food$ $UPKEEP$"
