--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -227,10 +227,6 @@
  leader_trait_surgical_bombardment_hive_desc:1 "Utilizing precise sensor data, this drone can deliver devastating attacks to ground armies with minimal collateral damage."
  leader_trait_surgical_bombardment_machine:0 "ทิ้งระเบิดเฉียบคม"
  leader_trait_surgical_bombardment_machine_desc:1 "Utilizing precise sensor data, this unit can deliver devastating attacks to ground armies with minimal collateral damage."
- leader_trait_scout_hive:0 "Scout"
- leader_trait_scout_hive_desc:1 "This drone is specialized for reconnaissance, ensuring we get the most out of long-range starship sensors."
- leader_trait_scout_machine:0 "Scout"
- leader_trait_scout_machine_desc:1 "This unit is specialized for reconnaissance, ensuring we get the most out of long-range starship sensors."
  leader_trait_scholar_of_war_hive:1 "Tactical Analyst"
  leader_trait_scholar_of_war_hive_desc:1 "This drone gathers extensive battle data to improve its performance over time."
  leader_trait_scholar_of_war_machine:1 "Tactical Analyst"
@@ -539,14 +535,6 @@
  leader_trait_meticulous_2_hive_desc:0 "$leader_trait_meticulous_hive_desc$"
  leader_trait_meticulous_2_machine:0 "$leader_trait_meticulous_machine$ II"
  leader_trait_meticulous_2_machine_desc:0 "$leader_trait_meticulous_machine_desc$"
- leader_trait_observant_hive:1 "Observer"
- leader_trait_observant_hive_desc:1 "This node employs thorough scans, increasing the chances of discovering planetary anomalies."
- leader_trait_observant_machine:0 "Deep Scan"
- leader_trait_observant_machine_desc:1 "This unit is optimized to perform thorough scans, increasing the odds of discovering planetary anomalies."
- leader_trait_observant_2_hive:0 "$leader_trait_observant_hive$ II"
- leader_trait_observant_2_hive_desc:0 "$leader_trait_observant_hive_desc$"
- leader_trait_observant_2_machine:0 "$leader_trait_observant_machine$ II"
- leader_trait_observant_2_machine_desc:0 "$leader_trait_observant_machine_desc$"
  leader_trait_roamer_hive:0 "Cataloger"
  leader_trait_roamer_hive_desc:1 "This drone was specifically bred to catalogue interstellar data."
  leader_trait_roamer_machine:0 "Cataloger"
@@ -841,14 +829,14 @@
  leader_trait_passive_machine_desc:1 "This unit displays an inability to respond proactively."
  leader_trait_emotional_support_pet_hive:0 "Emotional Support Symbiont"
  leader_trait_emotional_support_pet_hive_desc:1 "Through the chemical secretions of a mutualistic symbiont, this node promotes well-being within the hive."
- subclass_governor_pioneer_hive:0 "โดรนผู้บุกเบิก"
- subclass_governor_pioneer_hive_desc:1 "Preparing new worlds for the hive is a dangerous and costly. This drone knows how to mitigate those risks."
- subclass_governor_pioneer_machine:0 "ยูนิตผู้บุกเบิก"
- subclass_governor_pioneer_machine_desc:1 "Integrating new worlds into the network is dangerous and costly. This unit is programmed to mitigate such risks."
- subclass_governor_economist_hive:0 "กำกับดูแลการผลิต"
- subclass_governor_economist_hive_desc:1 "This drone was selectively bred to guide drones who require assistance in the production process."
- subclass_governor_economist_machine:0 "ลูปที่มีประสิทธิภาพ"
- subclass_governor_economist_machine_desc:1 "This unit is equipped to isolate and delete inefficient production patterns."
+ subclass_official_pioneer_hive:0 "Pioneer Drone"
+ subclass_official_pioneer_hive_desc:1 "Preparing new worlds for the hive is a dangerous and costly. This drone knows how to mitigate those risks."
+ subclass_official_pioneer_machine:0 "Pioneer Unit"
+ subclass_official_pioneer_machine_desc:1 "Integrating new worlds into the network is dangerous and costly. This unit is programmed to mitigate such risks."
+ subclass_official_industrialist_hive:0 "Production Oversight"
+ subclass_official_industrialist_hive_desc:1 "This drone was selectively bred to guide drones who require assistance in the production process."
+ subclass_official_industrialist_machine:0 "Efficiency Loop"
+ subclass_official_industrialist_machine_desc:1 "This unit is equipped to isolate and delete inefficient production patterns."
  leader_trait_agrarian_upbringing_2_hive:0 "$leader_trait_agrarian_upbringing_hive$ II"
  leader_trait_agrarian_upbringing_2_hive_desc:0 "$leader_trait_agrarian_upbringing_hive_desc$"
  leader_trait_intellectual_hive:0 "Task Manager"
@@ -953,18 +941,6 @@
  leader_trait_irenic_hive_desc:1 "A natural aversion to conflict drives this drone to avoid possible military escalation."
  leader_trait_irenic_machine:0 "Peace Protocols"
  leader_trait_irenic_machine_desc:0 "This unit promotes peace and will attempt to reject all attempts at increasing combat readiness."
- subclass_scientist_explorer_hive:0 "นักสำรวจ"
- subclass_scientist_explorer_hive_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations - the guiding impulse of this intrepid drone."
- subclass_scientist_explorer_machine:0 "นักสำรวจ"
- subclass_scientist_explorer_machine_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations - the guiding programming of this intrepid unit."
- subclass_scientist_analyst_hive:0 "นักวิเคราะห์"
- subclass_scientist_analyst_hive_desc:1 "Being at the forefront of science, conducting experiments, and researching new technologies to better the hive is the main concern for any determined analyst."
- subclass_scientist_analyst_machine:0 "นักวิเคราะห์"
- subclass_scientist_analyst_machine_desc:0 "Being at the forefront of science, conducting experiments, and researching new technologies to improve efficiency is the main concern for any determined analyst."
- subclass_scientist_researcher_hive:0 "นักวิจัย"
- subclass_scientist_researcher_hive_desc:1 "Researchers are the main driving force behind the management of research teams and projects. These drones pursue new knowledge relentlessly."
- subclass_scientist_researcher_machine:0 "นักวิจัย"
- subclass_scientist_researcher_machine_desc:1 "Researchers are the main driving force behind the management of research teams and projects. These units pursue new knowledge relentlessly."
  leader_trait_physics_focus_hive:0 "Physics Focus"
  leader_trait_physics_focus_hive_desc:0 "This node focuses on Physics research."
  leader_trait_physics_focus_machine:0 "Physics Focus"
@@ -1009,18 +985,18 @@
  leader_trait_collective_wisdom_2_hive_desc:0 "$leader_trait_collective_wisdom_hive_desc$"
  leader_trait_collective_wisdom_2_machine:0 "$leader_trait_collective_wisdom_machine$ II"
  leader_trait_collective_wisdom_2_machine_desc:0 "$leader_trait_collective_wisdom_machine_desc$"
- subclass_admiral_aggressor_hive:0 "ผู้รุกราน"
- subclass_admiral_aggressor_hive_desc:1 "Offense is the best defense. Aggressors are known for their relentless attacks, annihilating enemy fleets before they can counter."
- subclass_admiral_aggressor_machine:0 "ผู้รุกราน"
- subclass_admiral_aggressor_machine_desc:0 "$subclass_admiral_aggressor_hive_desc$"
- subclass_admiral_tactician_hive:0 "นักกลยุทธ์"
- subclass_admiral_tactician_hive_desc:0 "This drone is especially cunning. Their tactics are designed to mitigate enemy strengths and outsmart their commanders."
- subclass_admiral_tactician_machine:0 "นักกลยุทธ์"
- subclass_admiral_tactician_machine_desc:0 "$subclass_admiral_tactician_hive_desc$"
- subclass_admiral_strategist_hive:0 "นักยุทธศาสตร์"
- subclass_admiral_strategist_hive_desc:0 "Strategists are focused on the bigger picture. Instead of leading the battle up front, they prefer to maintain cohesion in the military and draw galaxy-spanning war plans."
- subclass_admiral_strategist_machine:0 "นักยุทธศาสตร์"
- subclass_admiral_strategist_machine_desc:0 "$subclass_admiral_strategist_hive_desc$"
+ subclass_commander_aggressor_hive:0 "Aggressor"
+ subclass_commander_aggressor_hive_desc:1 "Offense is the best defense. Aggressors are known for their relentless attacks, annihilating enemy fleets before they can counter."
+ subclass_commander_aggressor_machine:0 "Aggressor"
+ subclass_commander_aggressor_machine_desc:0 "$subclass_commander_aggressor_hive_desc$"
+ subclass_commander_tactician_hive:0 "Tactician"
+ subclass_commander_tactician_hive_desc:0 "This drone is especially cunning. Their tactics are designed to mitigate enemy strengths and outsmart their commanders."
+ subclass_commander_tactician_machine:0 "Tactician"
+ subclass_commander_tactician_machine_desc:0 "$subclass_commander_tactician_hive_desc$"
+ subclass_commander_strategist_hive:0 "Strategist"
+ subclass_commander_strategist_hive_desc:0 "Strategists are focused on the bigger picture. Instead of leading the battle up front, they prefer to maintain cohesion in the military and draw galaxy-spanning war plans."
+ subclass_commander_strategist_machine:0 "Strategist"
+ subclass_commander_strategist_machine_desc:0 "$subclass_commander_strategist_hive_desc$"
  leader_trait_cautious_hive:1 "Prudence"
  leader_trait_cautious_hive_desc:0 "This drone exhibits extremely cautious behavior."
  leader_trait_cautious_machine:1 "Prudence"
