--- a/mod/thmod/localisation/english/scripted_loc_l_english.yml
+++ b/mod/thmod/localisation/english/scripted_loc_l_english.yml
@@ -43,6 +43,8 @@
  drones_key:0 "drones"
  unit_key:0 "unit"
  units_key:0 "units"
+ crew_key: "crew"
+ crew_member_key: "crew member"
  getterraformer_machine:0 "terraforming unit"
  getterraformer_machine_plural:0 "terraforming units"
  getterraformer_hive:0 "terraforming drone"
@@ -105,3 +107,5 @@
  submantle_mantle:0 "mantle-dwelling"
  SubMantle_Sub:0 "Subterranean"
  SubMantle_Mantle:0 "Mantle-Dwelling"
+ getmechanical: "mechanical"
+ getbiological: "biological"
