--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -225,7 +225,7 @@
  toxoids.7120.C:0 "What does "whyastwhich" mean anyway? And "ood"?"
  toxoids.7125.desc1:0 ""Do not beset me with thy foul lasers, villain! Fine, fine, thou mayest pass - much good it will do thee."\n\n$toxoids.7125.desc.shared$"
  toxoids.7125.desc2:0 ""Ah, thou art wise! For that is the answer contained in my databanks. Thou mayest pass, if that doth pleaseth thee."\n\n$toxoids.7125.desc.shared$"
- toxoids.7125.desc3:1 ""Ah, thou art truly wise! For I cannot answer thee this question, as it has been removed from my databanks. Forsooth,this task of mine is irregular indeed... Hmm, thou mayest pass, if that doth pleaseth thee."\n\n$toxoids.7125.desc.shared$"
+ toxoids.7125.desc3:1 ""Ah, thou art truly wise! For I cannot answer thee this question, as it has been removed from my databanks. Forsooth, this task of mine is irregular indeed... Hmm, thou mayest pass, if that doth pleaseth thee."\n\n$toxoids.7125.desc.shared$"
  toxoids.7125.desc.shared:0 "The automaton disappears in a cloud of smoke."
  toxoids.7125.A:0 "Onwards, then!"
  toxoids.7130.name:0 "The Tale of Knight [questing_knight_10.GetFirstName]: The Robot's Disciple"
@@ -600,11 +600,11 @@
  toxoids.500.desc.1:0 "$toxoids.500.desc.intro$\n\nTerraforming this [From.GetPlanetMoon] would theoretically be possible, but we do not yet possess the means to accomplish this monumental task within a realistic timeframe."
  toxoids.500.desc.2:0 "$toxoids.500.desc.intro$\n\nThe energy costs would be daunting, but we do have the means to gradually terraform this [From.GetPlanetMoon] into something that would support life once again."
  TOXIC_TERRAFORMING_CANDIDATE_EFFECT:1 "§Y[From.GetName]§! may be terraformed if we choose the §H$ap_detox$§! Ascension Perk."
- d_tainted_snowcaps:0 "Tainted Snowcaps"
- d_poisonous_algae:0 "Poisonous Algae"
- d_venomous_insects:0 "Venomous Insects"
- d_unpleasant_atmosphere:0 "Unpleasant Atmosphere"
- d_rotten_soil:0 "Rotten Soil"
+ d_tainted_snowcaps:0 "£blocker£ Tainted Snowcaps"
+ d_poisonous_algae:0 "£blocker£ Poisonous Algae"
+ d_venomous_insects:0 "£blocker£ Venomous Insects"
+ d_unpleasant_atmosphere:0 "£blocker£ Unpleasant Atmosphere"
+ d_rotten_soil:0 "£blocker£ Rotten Soil"
  d_tainted_snowcaps_desc:0 "The last toxic remains of the once enormous mountains of poison that dominated this world."
  d_poisonous_algae_desc:1 "This noxious algae survived the initial cleansing of this world. While it is not aggressive enough to prevent colonization, it has proven highly adaptable... and quite simply a nuisance."
  d_venomous_insects_desc:0 "The lost broods of venomous vermin that we had hoped to extinguish during the early days of our terraforming effort."
