--- a/mod/thmod/localisation/english/tutorial_l_english.yml
+++ b/mod/thmod/localisation/english/tutorial_l_english.yml
@@ -13,7 +13,7 @@
  TUTORIAL_EMPIREVIEW_PLANETS_TITLE:1 "รายการดาวเคราะห์"
  TUTORIAL_EMPIREVIEW_PLANETS_DESC:5 "หน้าต่าง §Sดาวเคราะห์และเซ็กเตอร์§! แสดงภาพรวมของดาวที่เป็นอาณานิคมของเรารวมไปถึง §Sประชากร§! และ §Sผลิตผลทรัพยากร§! เมื่ออาณาจักรของเราเติบโตขึ้นก็สามารถจัดเป็นเซ็กเตอร์ซึ่งจะเป็นประโยชน์ในการบริหารจักรวรรดิที่ใหญ่ขึ้น\n\n§Sเซ็กเตอร์§! สามารถทำงานได้ด้วยตัวเองอัตโนมัติ และถ้าหากเปิดเป็นแบบอัตโนมัติ พวกเขาจะใช้ความเชี่ยวชาญและทรัพยากรเพื่อให้ดาวเคราะห์ภายในของพวกเขาสร้างและอัปเกรด §Sสิ่งปลูกสร้าง§! และ §Sเขตต่างๆ§! บนดาวเคราะห์ของพวกเขาได้เอง"
  TUTORIAL_MILITARY_FLEET_TITLE:0 "กองยานรบ"
- TUTORIAL_MILITARY_FLEET_DESC:2 "§SMilitary Fleets§! are used to protect our emerging empire from threats... or to expand our glorious rule through force of arms, if we so wish.\n\nOur current §SNaval Capacity§! is limited, but it can be increased by researching new technologies, owning additional §SPops§! and building §SStarbase Anchorages§!.\n\nWe can assign one of our §SAdmirals§! to command a Fleet, granting extra military power along with any other bonuses the leader provides."
+ TUTORIAL_MILITARY_FLEET_DESC:2 "§SMilitary Fleets§! are used to protect our emerging empire from threats... or to expand our glorious rule through force of arms, if we so wish.\n\nOur current §SNaval Capacity§! is limited, but it can be increased by researching new technologies, owning additional §SPops§! and building §SStarbase Anchorages§!.\n\nWe can assign one of our §SCommanders§! to command a Fleet, granting extra military power along with any other bonuses the leader provides."
  TUTORIAL_SCIENCE_SHIP_TITLE:0 "ยานวิจัยวิทยาศาสตร์"
  TUTORIAL_SCIENCE_SHIP_DESC:4 "This is our §SScience Ship§!, which is used to §SSurvey§! astronomical objects such as planets in a star system. A planet needs to be surveyed in order to make its §SResources§! visible.\n\nOur home system has already been surveyed, so we should focus our efforts elsewhere. With the Science Ship selected, right click on a star neighboring our home system and select §SSurvey System§! while viewing the §SGalaxy Map§!. The ship will now travel to this system and survey all of its planetary bodies."
  TUTORIAL_CONSTRUCTION_SHIP_TITLE:0 "ยานก่อสร้าง"
@@ -230,6 +230,8 @@
  advisor.1.desc_32:0 "Greetings, [root.GetPurityOrderRulerTitle].\n\n$advisor.1.desc_keenminds$\n\n$advisor.1.desc_filler$"
  advisor.1.desc_33:0 "Greetings, [root.GetPurificationCommitteeRulerTitle].\n\n$advisor.1.desc_keenminds$\n\n$advisor.1.desc_filler$"
  advisor.1.desc_34:0 "Greetings, $RT_OLIGARCH$.\n\n$advisor.1.desc_honortoserve$\n\n$advisor.1.desc_filler$"
+ advisor.1.desc_35: "Greetings, $RT_DEFENSIVE_UNION$.\n\n$advisor.1.desc_honortoserve$\n\n$advisor.1.desc_filler$"
+ advisor.1.desc_36: "Greetings, $RT_DIMENSIONAL_COVENANT$.\n\n$advisor.1.desc_honortoserve$\n\n$advisor.1.desc_filler$"
  advisor.1.desc_keenminds:0 "I am VIR, a prototype synthetic intelligence developed by the keenest minds in our civilization to serve as your advisor. I shall endeavor to carry out my duties with the utmost efficiency."
  advisor.1.desc_honortoserve:0 "I am VIR, a prototype synthetic intelligence developed under utmost secrecy by the military. I am honored to serve as your advisor and strategic analyst."
  advisor.1.desc_filler:0 "คุณสามารถเปลี่ยนระดับการสอนได้ตลอดเวลาในเมนู §Hตั้งค่า§!"
@@ -395,6 +397,8 @@
  tutorial.102.desc:0 "เปิดใช้ §Hสอนทำภารกิจ§! และ §HTips§!"
  tutorial.1337.name:0 "ศิลปวัตถุชั้นรอง"
  tutorial.1337.desc:2 "เราได้ค้นพบ §Sศิลปวัตถุชั้นรอง§! บางอย่าง สิ่งเหล่านี้เป็นทรัพยากรที่ลึกลับ - มีคำศัพท์เฉพาะสำหรับของแปลกๆ ที่เราไม่เข้าใจและไม่อาจอธิบายได้ ไม่ว่าสิ่งนี้จะทำอะไร ได้ก็ตามแต่สิ่งนี้สามารถใช้เพื่อสร้างการตัดสินใจที่หลากหลายผ่านทางหน้าต่าง §S$RELICS_AND_ARTIFACTS$§! แท็บอินเตอร์เฟซ §S$TRADITION_VIEW_TITLE$§!"
+ tutorial.1340.name: "$astral_threads$"
+ tutorial.1340.desc: "We have discovered some §SAstral Threads§!. These are filaments of condensed space-time: the result of dimensional planes colliding. Typically, these can only be harvested from §SAstral Scars§! or recovered inside §SAstral Rifts§!.\n\nWe can use the resource to perform various actions via the §SAstral Actions§! screen, a tab on the §S$topbar_button_discoveries_name$§! interface. You can unlock more of these actions by exploring more §SAstral Rifts§!.\n\n§SAstral Rifts§! can develop from §SAstral Scars§! or be created by other anomalous events."
  tutorial.2000.name:0 "การดำเนินการติดต่อครั้งแรก"
  tutorial.2000.desc:1 "ภารกิจ §Sการติดต่อครั้งแรก§! บางภารกิจจะเสนอทางเลือกว่าเราต้องการที่จะดำเนินการอย่างไร ทางเลือกเหล่านี้อาจส่งผลต่อความสัมพันธ์ทางการฑูตของเรากับจักรวรรดิอื่นเป็นเวลานาน"
  tutorial.2006.name:0 "First Contact Established"
@@ -512,7 +516,7 @@
  tutorial_16_chain_title:0 "Tutorial: Increase the Fleet"
  tutorial_16_chain_desc:5 "We should build a potent starfleet to uphold the [Root.GetName].\n\nA few more §SCorvettes§! should do, for now. Build the ships at a §SStarbase§! when our §SAlloy§! supplies permit. New military ships always join any existing fleets in orbit of the §SStarbase§! that builds them.\n\nTo optimize a fleet's military power, we may choose to assign it an §SAdmiral§!. This would give it an edge over other fleets, most of which serve without a commander of their own."
  corvettes_built:0 "Corvettes Built"
- admiral_assigned:0 "Admiral Assigned"
+ admiral_assigned:1 "Commander Assigned"
  tutorial_16_tooltip:0 "§STutorial: Increase the Fleet§! added to Situation Log"
  tutorial_17_chain_title:0 "Tutorial: Establish Sector"
  tutorial_17_chain_desc:1 "There is a limit to how many planets you can control directly. This limit can be found in the top bar, and going above it will incur penalties. §SSectors§! are semi-autonomous and manage the planets that have been assigned under their control. To create a new sector, go into the §SPlanets and Sectors§! view by clicking on its associated icon in the top bar drop-down list or press §SF5§!. Then click on the §SCreate New Sector§! button to the upper right.\n\nYou will now enter the §SSector Management Mode§!. From here, you designate which star systems should make up the new sector. All planets within those systems will fall under the sector's jurisdiction. Select a system where we have a colony, and click on the §SFinish§! button. You will now have created our first sector!"
