--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -84,10 +84,10 @@
  utopia.2657.a.tt:0 "§Gสิ่งนี้จะทำให้เราสร้างพันธสัญญา§!"
  utopia.2657.b:0 "We will venture in alone."
  utopia.2657.c:0 "This was a terrible idea! We must be more careful."
- name_composer:0 "Composer of Strands"
- name_eater:0 "Eater of Worlds"
- name_instrument:0 "Instrument of Desire"
- name_whisperers:0 "Whisperers in the Void"
+ name_composer:0 "ผู้สร้าง"
+ name_eater:0 "ผู้ทำลาย"
+ name_instrument:0 "ผู้เล่นดนตรี"
+ name_whisperers:0 "ผู้กระซิบ"
  utopia.2658.name:0 "A Confirmation"
  utopia.2658.desc:1 "Time has passed since we established the foundation of a covenant with the §Y[GetShroudPatron]§!. Our bond is still weak, and we still have a chance to break it - or alternatively, strengthen our connection."
  utopia.2658.a:0 "Confirm the Covenant."
@@ -568,9 +568,9 @@
  utopia.2681.b:0 "[leader_2.GetTitle] [leader_2.GetName]"
  utopia.2681.c:0 "[leader_3.GetTitle] [leader_3.GetName]"
  utopia.2681.d:0 "[leader_4.GetTitle] [leader_4.GetName]"
- utopia.2682.name:0 "Ascended"
- utopia.2682.desc:0 "It is done. As the power was invested in [chosen_leader.GetName], all those around could feel the weight of its psionic presence. It is powerful and commands respect. [chosen_leader.GetHeShe] will now be the immortal champion of the §Y[GetShroudPatron]§!."
- utopia.2682.a:0 "They were destined to be Chosen."
+ utopia.2682.name:0 "ยกระดับ"
+ utopia.2682.desc:0 "เสร็จสมบูรณ์แล้ว พลังที่ถูกมอบให้ [chosen_leader.GetName] แล้ว ทุกคนรอบข้างก็รู้สึกได้ ถึงการมีอยู่ของพลังจิต ตอนนี้[chosen_leader.GetHeShe]จะเป็นแชมเปี้ยนผู้เป็นอมตะของ §Y[GetShroudPatron]§!"
+ utopia.2682.a:0 "พวกเขาถูกกำหนดให้เป็นผู้ถูกเลือก"
  utopia.2686.name:0 "Blessed Armaments"
  utopia.2686.desc:0 "The conclave of Telepaths has made a breakthrough in harnessing the powers of our patron, the §Y[GetShroudPatron]§!. Where previously only psionic individuals could fully grasp the extent of the Covenant, we have devised a way to let power flow through entire starships, at a scale never seen before. Should we wish it, the mark of the §Y[GetShroudPatron]§! can push our ships further than ever before."
  utopia.2686.a:0 "What is a hull if not flesh?"
@@ -607,17 +607,17 @@
  tech_covenant_instrument_desc:0 "$tech_covenant_composer_desc$"
  tech_covenant_whisperers:0 "$WHISPERERS_MARK$"
  tech_covenant_whisperers_desc:0 "$tech_covenant_composer_desc$"
- utopia.3400.name:0 "A Divine Sovereign"
- utopia.3400.desc:0 "The immortal entity known as §H[chosen_one.GetName]§!, previously [chosen_one_species.GetName] but now something far more, has attracted a large and devout following in the [Root.GetName]. Worshipped by many as a supreme deity, a call has gone out to officially crown the [chosen_one.GetTitle] as the permanent ruler of our great empire, now and into perpetuity."
- utopia.3400.a:0 "A powerful psychic, but a God? Hardly."
- utopia.3400.b:0 "May [chosen_one.GetHerHis] reign stretch into infinity... and beyond!"
+ utopia.3400.name:0 "พระเจ้าผู้มีอำนาจสูงสุด"
+ utopia.3400.desc:0 "สิ่งมีชีวิตอมตะที่รู้จักกันในชื่อ §H[chosen_one.GetName]§! ซึ่งก่อนหน้านี้เป็น [chosen_one_species.GetName] แต่ตอนนี้มีอะไรที่มากกว่านั้นมาก ได้ดึงดูดผู้ติดตามจำนวนมากและศรัทธาใน [Root.GetName] จึงมีเสียงเรียกร้องให้สวมมงกุฎ [chosen_one.GetTitle] อย่างเป็นทางการ ให้เป็นผู้ปกครองถาวรของจักรวรรดิอันยิ่งใหญ่ของเรา บัดนี้และสู่ความเป็นนิรันดร์"
+ utopia.3400.a:0 "พลังจิตที่ทรงพลัง แต่เป็นพระเจ้าเหรอ?"
+ utopia.3400.b:0 "ขอให้ [chosen_one.GetHerHis] ครองราชย์จนไม่มีที่สิ้นสุด... และตลอดไป!"
  reject_god_emperor:0 "[chosen_one.GetName] จะยังคงเป็น [chosen_one.GetTitle]"
  utopia.3401.name:0 "[chosen_one.GetTitle] crowned on [From.Capital.GetName]"
  utopia.3401.desc:0 "An immensely powerful [chosen_one_species.GetName] psychic has seized control of the §H[From.GetName]§!! This immortal being, referred to in hushed whispers as the "Chosen One" by [chosen_one.GetHerHis] followers, was crowned on [From.Capital.GetName] in a lavish ceremony this morning. A communique celebrating the eternal rule of §H[chosen_one.GetRulerTitle] [chosen_one.GetRegnalName]§! was sent out to all interstellar governments shortly thereafter."
  utopia.3401.a:0 "[chosen_one.GetName] has been touched by the Shroud."
  utopia.3401.b:0 "Superstitious nonsense."
  utopia.3401.c:0 "A significant development."
- civic_psionic_sovereign:0 "Divine Sovereign"
- civic_psionic_sovereign_desc:0 "This society has appointed the Chosen One - an individual endowed with unparalleled psionic might - as their eternal ruler."
+ civic_psionic_sovereign:0 "พระเจ้าผู้มีอำนาจสูงสุด"
+ civic_psionic_sovereign_desc:0 "สังคมนี้ได้แต่งตั้งผู้ถูกเลือก - บุคคลที่มีพลังจิตที่ไม่มีใครเทียบได้ - เป็นผู้ปกครองชั่วนิรันดร์ของพวกเขา"
  master_builders_habitats:1 "$ap_voidborn$: Expansion"
  master_builders_habitats_desc:0 "This $pc_habitat$ has been expanded by an additional §Y2§! $MOD_PLANET_MAX_DISTRICTS_ADD$."
